// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons avatars should render "Cat" icon 1`] = `
<svg
  fill="none"
  height="300"
  viewBox="0 0 300 300"
  width="300"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    clipPath="url(#clip0)"
  >
    <path
      d="M232.986 226.834C232.986 271.254 196.185 300 150.785 300C105.388 300 68.59 271.254 68.59 226.834C68.59 182.419 105.389 139.154 150.785 139.154C196.184 139.153 232.986 182.419 232.986 226.834Z"
      fill="#5C2938"
    />
    <path
      d="M108.878 170.35L151.441 269.182L192.692 168.381C192.692 168.382 147.293 138.917 108.878 170.35Z"
      fill="white"
    />
    <path
      d="M150.785 300C151.794 300 152.789 299.97 153.787 299.94L151.441 206.666L147.813 299.94C148.801 299.97 149.787 300 150.785 300Z"
      fill="#3F1722"
    />
    <path
      d="M211.832 237.497L205.948 225.261C203.784 220.763 200.246 220.76 198.08 225.261L194.975 231.717L194.064 233.607L192.193 237.498H192.19L188.256 245.678H197.336H206.69H215.768L211.832 237.497Z"
      fill="#E37C2F"
    />
    <path
      d="M159.489 227.883C159.489 247.47 155.593 260.151 150.785 260.151C145.978 260.151 142.082 247.47 142.082 227.883C142.082 208.288 145.978 189.205 150.785 189.205C155.593 189.205 159.489 208.288 159.489 227.883Z"
      fill="#D31E25"
    />
    <path
      d="M160.625 186.548C160.625 194.134 156.222 199.039 150.785 199.039C145.351 199.039 140.946 194.134 140.946 186.548C140.946 178.964 145.352 171.576 150.785 171.576C156.221 171.576 160.625 178.964 160.625 186.548Z"
      fill="#D31E25"
    />
    <path
      d="M151.558 182.042L133.926 204.909L110.787 171.302L133.926 166.614L151.558 182.042Z"
      fill="#E8DFCE"
    />
    <path
      d="M150.457 182.042L168.089 204.909L191.228 171.302L168.089 166.614L150.457 182.042Z"
      fill="#E8DFCE"
    />
    <path
      d="M151.008 251.323L103.626 154.906L72.497 164.825L105.421 211.034L127.316 216.888L114.881 224.309L151.008 275.017V251.323Z"
      fill="#3F1722"
    />
    <path
      d="M150.457 251.323L197.838 154.906L228.97 164.825L196.043 211.034L174.146 216.888L186.586 224.309L150.457 275.017V251.323Z"
      fill="#3F1722"
    />
    <path
      d="M63.932 18.497C57.945 16.436 51.921 15.14 45.779 13.733C39.423 12.28 31.788 11.352 25.837 11.054C23.215 10.924 22.659 12.177 22.263 15.219C21.981 17.377 23.209 20.338 23.974 22.363C26.054 27.875 28.163 33.797 30.961 39.038C34.242 45.174 37.501 52.793 41.907 58.08L43.694 56.887C44.987 54.309 46.826 52.703 48.754 50.654C51.861 47.351 54.518 44.052 57.978 41.129C62.27 37.509 66.079 33.277 70.48 29.793C72.931 27.846 75.572 26.767 77.578 24.376C75.382 20.943 67.671 19.783 63.932 18.497Z"
      fill="#A06F60"
    />
    <path
      d="M58.938 30.037C54.185 29.142 49.223 27.724 44.291 27.423C42.032 27.288 38.602 26.889 38.347 29.196C38.136 31.105 43.455 40.193 44.968 42.538C46.012 44.149 47.484 47.359 49.051 48.259V46.768C48.91 47.004 48.718 47.085 48.479 47.02C51.678 44.094 55.42 40.494 58.945 37.319C59.997 36.375 63.565 33.604 63.649 32.203C63.78 30.032 60.418 30.316 58.938 30.037Z"
      fill="#FFD1BA"
    />
    <path
      d="M236.768 18.497C242.76 16.436 248.782 15.14 254.923 13.733C261.281 12.28 268.911 11.352 274.865 11.054C277.484 10.924 278.04 12.177 278.436 15.219C278.718 17.377 277.49 20.338 276.728 22.363C274.651 27.875 272.539 33.797 269.738 39.038C266.46 45.174 263.201 52.793 258.795 58.08L257.005 56.887C255.715 54.309 253.876 52.703 251.948 50.654C248.841 47.351 246.181 44.052 242.721 41.129C238.429 37.509 234.622 33.277 230.221 29.793C227.767 27.846 225.129 26.767 223.123 24.376C225.318 20.943 233.029 19.783 236.768 18.497Z"
      fill="#A06F60"
    />
    <path
      d="M241.762 30.037C246.515 29.142 251.48 27.724 256.409 27.423C258.67 27.288 262.1 26.889 262.352 29.196C262.564 31.105 257.246 40.193 255.734 42.538C254.693 44.149 253.218 47.359 251.651 48.259V46.768C251.795 47.004 251.984 47.085 252.22 47.02C249.023 44.094 245.279 40.494 241.757 37.319C240.705 36.375 237.137 33.604 237.05 32.203C236.923 30.032 240.282 30.316 241.762 30.037Z"
      fill="#FFD1BA"
    />
    <path
      d="M276.004 68.739C253.59 37.867 214.085 1.275 150.736 1.196V1.185C150.603 1.185 150.481 1.191 150.351 1.191C150.221 1.191 150.096 1.185 149.969 1.185V1.196C86.618 1.275 47.113 37.867 24.696 68.739C14.053 83.397 0.700012 89.044 0.700012 89.044C0.700012 89.044 23.478 112.161 53.49 139.245C79.129 162.387 108.482 187.803 149.969 188.136V188.147C150.096 188.147 150.224 188.141 150.351 188.141C150.478 188.141 150.606 188.147 150.736 188.147V188.136C192.223 187.803 221.573 162.386 247.212 139.245C277.222 112.162 300 89.044 300 89.044C300 89.044 286.649 83.397 276.004 68.739Z"
      fill="#CCB5A7"
    />
    <path
      d="M70.995 70.022C70.995 70.022 105.714 57.992 109.516 95.259C109.516 95.259 74.615 116.242 70.995 70.022Z"
      fill="white"
    />
    <path
      d="M74.01 76.708C74.935 66.874 83.649 59.661 93.48 60.589C103.317 61.514 110.526 70.225 109.605 80.062C108.678 89.893 99.95 97.103 90.129 96.181C80.295 95.254 73.083 86.536 74.01 76.708Z"
      fill="#4A5F71"
    />
    <path
      d="M90.544 64.721C90.544 64.721 88.388 70.803 88.185 76.193C88.011 80.811 89.674 87.998 89.674 87.998C89.674 87.998 95.663 77.244 90.544 64.721Z"
      fill="white"
    />
    <path
      d="M165.963 134.24C165.963 125.686 159.1 123.549 150.636 123.549C142.174 123.549 135.311 125.685 135.311 134.24C135.311 142.791 142.174 157.148 150.636 157.148C159.101 157.148 165.963 142.792 165.963 134.24Z"
      fill="#A06F60"
    />
    <path
      d="M146.875 121.613C146.875 121.613 139.516 110.77 120.157 116.966C100.792 123.164 99.247 141.36 107.763 150.655C116.282 159.949 134.174 153.478 141.067 146.008C155.007 130.908 146.875 121.613 146.875 121.613Z"
      fill="#FFD1BA"
    />
    <path
      d="M125.575 119.677C125.575 119.677 120.931 120.838 123.254 124.322C125.575 127.809 129.837 125.1 132.549 123.937C135.257 122.774 148.815 116.963 149.972 127.424C151.133 137.879 125.575 137.106 121.703 132.844C121.703 132.844 115.201 129.005 118.609 123.164C121.318 118.514 125.575 119.677 125.575 119.677Z"
      fill="#3F1722"
    />
    <path
      d="M34.972 55.757C31.211 60.117 27.787 64.482 24.696 68.739C14.053 83.397 0.700012 89.044 0.700012 89.044C0.700012 89.044 15.412 103.967 36.745 123.872C24.227 94.361 29.712 69.409 34.972 55.757Z"
      fill="#A06F60"
    />
    <path
      d="M229.708 70.022C229.708 70.022 194.989 57.992 191.188 95.259C191.187 95.259 226.088 116.242 229.708 70.022Z"
      fill="#442282"
      opacity="0.49"
    />
    <path
      d="M229.708 70.022C229.708 70.022 194.989 57.992 191.188 95.259C191.187 95.259 226.088 116.242 229.708 70.022Z"
      fill="white"
    />
    <path
      d="M226.69 76.708C225.768 66.874 217.051 59.661 207.22 60.589C197.386 61.514 190.173 70.225 191.098 80.062C192.025 89.893 200.751 97.103 210.571 96.181C220.408 95.254 227.617 86.536 226.69 76.708Z"
      fill="#4A5F71"
    />
    <path
      d="M210.159 64.721C210.159 64.721 212.312 70.803 212.518 76.193C212.692 80.811 211.032 87.998 211.032 87.998C211.032 87.998 205.037 77.244 210.159 64.721Z"
      fill="white"
    />
    <path
      d="M276.004 68.739C272.916 64.482 269.489 60.117 265.731 55.757C270.994 69.409 276.473 94.361 263.958 123.872C285.291 103.968 300 89.044 300 89.044C300 89.044 286.649 83.397 276.004 68.739Z"
      fill="#A06F60"
    />
    <path
      d="M150.736 1.196V1.185C150.603 1.185 150.481 1.191 150.351 1.191C150.221 1.191 150.096 1.185 149.969 1.185V1.196C120.057 1.234 95.473 9.411 75.482 21.282C85.243 21.371 132.101 26.238 141.455 110.776H148.789H151.913H159.244C168.601 26.238 215.456 21.371 225.22 21.282C205.232 9.412 180.643 1.234 150.736 1.196Z"
      fill="#A06F60"
    />
    <path
      d="M153.827 121.613C153.827 121.613 161.186 110.77 180.545 116.966C199.907 123.164 201.458 141.36 192.936 150.655C184.42 159.949 166.527 153.478 159.635 146.008C145.693 130.908 153.827 121.613 153.827 121.613Z"
      fill="#FFD1BA"
    />
    <path
      d="M175.125 119.677C175.125 119.677 179.77 120.838 177.449 124.322C175.125 127.809 170.863 125.1 168.155 123.937C165.444 122.774 151.889 116.963 150.732 127.424C149.569 137.879 175.129 137.106 178.998 132.844C178.998 132.844 185.503 129.005 182.095 123.164C179.385 118.514 175.125 119.677 175.125 119.677Z"
      fill="#3F1722"
    />
    <path
      d="M169.353 113.111C169.353 107.642 159.476 106.514 150.173 106.514C140.873 106.514 130.996 107.642 130.996 113.111C130.996 118.574 140.873 128.55 150.173 128.55C159.475 128.549 169.353 118.574 169.353 113.111Z"
      fill="#19173E"
    />
    <path
      d="M151.677 149.315C151.677 149.315 141.198 150.205 133.847 157.335C126.494 164.466 122.481 172.489 119.363 169.815C116.24 167.139 115.125 161.345 115.125 161.345C115.125 161.345 114.458 158.002 108.889 158.672C103.314 159.342 99.082 162.904 100.638 167.364C102.203 171.819 103.984 186.083 117.801 184.966C117.801 184.966 124.71 184.302 129.17 175.387C133.622 166.469 137.635 155.328 153.014 150.871C153.014 150.872 154.123 149.09 151.677 149.315Z"
      fill="#19173E"
    />
    <path
      d="M241.274 83.871H237.543C237.258 83.871 237.003 83.977 236.74 84.055C233.245 77.572 226.391 73.152 218.52 73.152C207.119 73.152 197.838 82.433 197.838 93.837C197.838 105.241 207.119 114.522 218.52 114.522C229.927 114.522 239.21 105.241 239.21 93.837C239.21 92.894 239.126 91.977 239.001 91.069H241.273C243.038 91.069 244.47 89.461 244.47 87.469C244.471 85.482 243.04 83.871 241.274 83.871ZM218.521 110.044C208.993 110.044 201.242 102.775 201.242 93.838C201.242 84.904 208.994 77.632 218.521 77.632C228.057 77.632 235.806 84.904 235.806 93.838C235.806 102.775 228.057 110.044 218.521 110.044Z"
      fill="#19173E"
    />
    <path
      d="M194.986 248.204C194.373 248.204 193.85 247.74 193.782 247.12C193.717 246.458 194.2 245.862 194.861 245.791C194.996 245.777 208.635 244.14 223.531 227.516C243.977 204.692 241.206 88.412 241.177 87.24C241.158 86.573 241.687 86.02 242.354 86.001C243.016 86.096 243.58 86.514 243.596 87.18C243.721 92.004 246.419 205.594 225.332 229.128C209.758 246.513 195.7 248.135 195.109 248.194C195.07 248.202 195.027 248.204 194.986 248.204Z"
      fill="#4A5F71"
    />
    <path
      d="M217.903 244.235H186.318V251.358H217.903V244.235Z"
      fill="#3F1722"
    />
  </g>
  <defs>
    <clipPath
      id="clip0"
    >
      <rect
        fill="white"
        height="300"
        width="300"
      />
    </clipPath>
  </defs>
</svg>
`;

exports[`Icons avatars should render "Dog" icon 1`] = `
<svg
  fill="none"
  height="300"
  viewBox="0 0 300 300"
  width="300"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M233.284 223.554C233.284 269.902 197.215 299.901 152.714 299.901C108.221 299.901 72.1489 269.902 72.1489 223.554C72.1489 177.206 108.22 132.057 152.714 132.057C197.215 132.057 233.284 177.206 233.284 223.554Z"
    fill="#A06F60"
  />
  <path
    d="M110.695 180.735L152.414 266.992L192.846 178.686C192.846 178.686 148.347 147.938 110.695 180.735Z"
    fill="white"
  />
  <path
    d="M151.582 299.88C151.928 299.883 152.276 299.901 152.629 299.901C153.471 299.901 154.3 299.869 155.135 299.848L152.408 231.801L151.582 299.88Z"
    fill="#3F1722"
  />
  <path
    d="M213.841 255.139L183.38 260.669L184.708 267.985L215.169 262.456L213.841 255.139Z"
    fill="#3F1722"
  />
  <path
    d="M143.136 228.726C143.136 237.249 147.425 262.071 152.719 262.071C158.013 262.071 162.305 237.249 162.305 228.726C162.305 220.206 158.013 203.345 152.719 203.345C147.425 203.345 143.136 220.205 143.136 228.726Z"
    fill="#E37B62"
  />
  <path
    d="M162.305 192.484C162.305 186.849 158.01 182.28 152.719 182.28C147.425 182.28 143.136 186.848 143.136 192.484C143.136 198.12 147.425 209.269 152.719 209.269C158.01 209.269 162.305 198.12 162.305 192.484Z"
    fill="#E37B62"
  />
  <path
    d="M113.767 184.529L128.602 217.109L151.172 185.174L113.767 184.529Z"
    fill="#E8DFCE"
  />
  <path
    d="M153.019 274.496V260.608L114.678 174.683L103.83 152.101C93.0299 161.913 84.3869 174.64 78.8749 188.729L96.4309 206.229L116.549 207.238L107.091 216.853L153.019 274.496Z"
    fill="#3F1722"
  />
  <path
    d="M191.669 184.529L176.831 217.109L154.26 185.174L191.669 184.529Z"
    fill="#E8DFCE"
  />
  <path
    d="M226.56 188.728C221.048 174.64 212.403 161.914 201.605 152.101L190.757 174.683L152.414 260.608V274.496L198.35 216.853L188.886 207.238L209.004 206.229L226.56 188.728Z"
    fill="#3F1722"
  />
  <path
    d="M139.697 282.52C139.697 280.043 141.709 278.035 144.183 278.035C146.66 278.035 148.672 280.043 148.672 282.52C148.672 284.997 146.66 287.006 144.183 287.006C141.709 287.007 139.697 284.997 139.697 282.52Z"
    fill="#3F1722"
  />
  <path
    d="M251.951 108.416C235.339 65.226 224.448 41.532 215.816 19.96C207.514 -0.803989 170.167 1.24401 153.219 1.24401C153.049 1.24401 152.882 1.25201 152.714 1.25901C152.549 1.25201 152.382 1.24401 152.217 1.24401C135.264 1.24401 97.917 -0.803989 89.612 19.96C80.988 41.533 70.097 65.227 53.485 108.416C43.633 134.023 53.015 157.725 75.91 171.953C96.368 184.67 128.836 189.396 152.217 189.396C152.382 189.396 152.549 189.389 152.714 189.385C152.882 189.389 153.049 189.396 153.219 189.396C176.6 189.396 209.063 184.67 229.526 171.953C252.418 157.724 261.797 134.023 251.951 108.416Z"
    fill="#A06F60"
  />
  <path
    d="M136.248 190.016C163.559 176.429 178.204 150.35 168.959 131.767C159.715 113.183 130.08 109.133 102.769 122.72C75.458 136.307 60.8125 162.386 70.0575 180.969C79.3024 199.552 108.937 203.603 136.248 190.016Z"
    fill="#CCB5A7"
  />
  <path
    d="M85.947 88.497C85.947 88.497 109.578 70.291 122.111 98.013C122.112 98.012 100.652 123.165 85.947 88.497Z"
    fill="#442282"
    opacity="0.49"
  />
  <path
    d="M85.947 88.497C85.947 88.497 109.578 70.291 122.111 98.013C122.112 98.012 100.652 123.165 85.947 88.497Z"
    fill="white"
  />
  <path
    d="M91.799 93.484C89.989 85.672 94.839 77.869 102.642 76.05C110.453 74.232 118.253 79.086 120.073 86.892C121.893 94.701 117.041 102.507 109.235 104.326C101.42 106.145 93.625 101.293 91.799 93.484Z"
    fill="#19173E"
  />
  <path
    d="M103.737 89.042C103.269 87.024 101.244 85.763 99.2191 86.233C97.1991 86.705 95.9391 88.73 96.4071 90.753C96.8801 92.776 98.9001 94.038 100.933 93.565C102.956 93.092 104.208 91.07 103.737 89.042Z"
    fill="white"
  />
  <path
    d="M113.044 94.607C112.704 93.16 111.261 92.263 109.81 92.598C108.367 92.937 107.466 94.38 107.804 95.827C108.139 97.273 109.585 98.172 111.038 97.833C112.478 97.497 113.382 96.054 113.044 94.607Z"
    fill="white"
  />
  <path
    d="M176.244 122.42C176.244 114.96 164.413 113.42 153.269 113.42C142.129 113.42 130.3 114.96 130.3 122.42C130.3 129.877 142.129 143.496 153.269 143.496C164.413 143.496 176.244 129.877 176.244 122.42Z"
    fill="#442282"
    opacity="0.49"
  />
  <path
    d="M136.473 131.781C127.227 150.367 141.873 176.444 169.183 190.03C196.5 203.617 226.135 199.567 235.375 180.98C244.621 162.396 229.972 136.318 202.66 122.731C175.348 109.146 145.716 113.198 136.473 131.781Z"
    fill="#CCB5A7"
  />
  <path
    d="M204.803 139.043C204.803 139.043 202.036 148.925 187.412 146.949C172.782 144.972 170.417 140.624 167.645 147.74C164.881 154.854 184.061 156.186 194.13 153.669C208.358 150.112 204.803 139.043 204.803 139.043Z"
    fill="#19173E"
  />
  <path
    d="M173.756 118.488C173.756 118.488 153.596 116.118 170.594 66.309C181.682 33.821 200.165 19.502 211.68 13.47C198.881 -0.336989 168.144 1.24301 153.219 1.24301C153.049 1.24301 152.882 1.25101 152.714 1.25801C152.549 1.25101 152.382 1.24301 152.217 1.24301C137.313 1.24301 106.642 -0.333989 93.809 13.402C105.316 19.4 123.893 33.709 135.02 66.309C152.015 116.118 131.855 118.488 131.855 118.488H150.437H155.181H173.756Z"
    fill="#CCB5A7"
  />
  <path
    d="M219.488 88.497C219.488 88.497 195.852 70.291 183.316 98.013C183.316 98.012 204.781 123.165 219.488 88.497Z"
    fill="white"
  />
  <path
    d="M213.631 93.484C215.446 85.672 210.596 77.869 202.788 76.05C194.983 74.232 187.177 79.086 185.354 86.892C183.539 94.701 188.392 102.507 196.199 104.326C204.008 106.145 211.81 101.293 213.631 93.484Z"
    fill="#19173E"
  />
  <path
    d="M201.693 89.042C202.163 87.024 204.186 85.763 206.216 86.233C208.233 86.705 209.496 88.73 209.028 90.753C208.555 92.776 206.53 94.038 204.502 93.565C202.48 93.092 201.223 91.07 201.693 89.042Z"
    fill="white"
  />
  <path
    d="M192.391 94.607C192.723 93.16 194.174 92.263 195.617 92.598C197.065 92.937 197.966 94.38 197.631 95.827C197.291 97.273 195.845 98.172 194.397 97.833C192.958 97.497 192.054 96.054 192.391 94.607Z"
    fill="white"
  />
  <path
    d="M129.192 122.42C129.192 114.96 141.023 113.42 152.164 113.42C163.304 113.42 175.136 114.96 175.136 122.42C175.136 129.877 163.304 143.496 152.164 143.496C141.023 143.496 129.192 129.877 129.192 122.42Z"
    fill="#3F1722"
  />
  <path
    d="M149.942 178.725C149.942 178.725 128.147 180.577 112.85 195.415C97.55 210.251 89.203 226.945 82.713 221.381C76.218 215.816 73.903 203.763 73.903 203.763C73.903 203.763 72.513 196.808 60.921 198.198C49.331 199.591 40.524 207.007 43.764 216.28C47.011 225.554 50.724 255.231 79.466 252.91C79.466 252.91 93.841 251.519 103.113 232.971C112.383 214.425 120.733 191.242 152.722 181.969C152.722 181.968 155.042 178.261 149.942 178.725Z"
    fill="#19173E"
  />
  <path
    d="M235.878 112.858C235.626 110.352 233.523 108.371 230.956 108.371H184.7C183.525 108.371 182.454 108.803 181.601 109.491C174.875 102.775 164.462 98.428 152.705 98.428C140.956 98.428 130.549 102.772 123.817 109.481C122.967 108.799 121.901 108.372 120.732 108.372H74.474C71.912 108.372 69.805 110.353 69.558 112.859H62.037V118.199H69.513V124.771C69.513 127.502 71.745 129.734 74.475 129.734H120.733C123.465 129.734 125.7 127.502 125.7 124.771V114.31C131.384 107.602 141.348 103.135 152.706 103.135C164.081 103.135 174.054 107.614 179.736 114.334V124.772C179.736 127.503 181.968 129.735 184.7 129.735H230.955C233.684 129.735 235.922 127.503 235.922 124.772V118.2H243.398V112.86H235.878V112.858ZM120.732 124.77H74.474V113.335H120.732V124.77ZM230.956 124.77H184.7V113.335H230.955V124.77H230.956Z"
    fill="#19173E"
  />
  <path
    d="M100.628 139.043C100.628 139.043 103.395 148.925 118.025 146.949C132.65 144.972 135.02 140.624 137.787 147.74C140.556 154.854 121.371 156.186 111.302 153.669C97.0719 150.112 100.628 139.043 100.628 139.043Z"
    fill="#19173E"
  />
  <path
    d="M96.671 16.64C96.671 16.64 97.5 4.59602 85.876 12.071C74.246 19.546 -10.472 56.506 15.277 111.74C41.023 166.973 96.671 16.64 96.671 16.64Z"
    fill="#5C2938"
  />
  <path
    d="M208.757 16.64C208.757 16.64 207.928 4.59602 219.555 12.071C231.184 19.546 315.903 56.506 290.156 111.74C264.407 166.973 208.757 16.64 208.757 16.64Z"
    fill="#5C2938"
  />
</svg>
`;

exports[`Icons avatars should render "Fox" icon 1`] = `
<svg
  fill="none"
  height="300"
  viewBox="0 0 300 300"
  width="300"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    clipPath="url(#clip0)"
  >
    <path
      d="M221.704 236.022C221.704 275.21 189.235 300.575 149.181 300.575C109.129 300.575 76.662 275.211 76.662 236.022C76.662 196.836 109.129 158.661 149.181 158.661C189.235 158.662 221.704 196.836 221.704 236.022Z"
      fill="#3F1722"
    />
    <path
      d="M148.238 300.559C148.551 300.561 148.862 300.576 149.181 300.576C149.939 300.576 150.686 300.55 151.437 300.533L148.985 242.996L148.238 300.559Z"
      fill="#5C2938"
    />
    <path
      d="M111.434 186.186L149.639 280.019L185.38 184.452C185.381 184.452 145.326 158.456 111.434 186.186Z"
      fill="#E8DFCE"
    />
    <path
      d="M199.122 252.892L192.326 243.027C189.826 239.398 186.74 239.879 185.468 244.099L183.638 250.149L183.102 251.922L181.997 255.565L179.684 263.232L187.6 261.998L195.755 260.725L203.668 259.486L199.122 252.892Z"
      fill="white"
    />
    <path
      d="M205.333 257.92L177.799 262.22L178.77 268.432L206.303 264.132L205.333 257.92Z"
      fill="#5C2938"
    />
    <path
      d="M149.766 270.391C149.766 270.391 133.492 241.915 124.452 210.276C116.467 182.319 115.412 164.172 115.412 164.172L84.2229 188.13C84.2229 188.13 89.1009 199.866 99.9539 217.843L121.29 228.357L113.53 238.598C129.199 260.333 149.767 281.243 149.767 281.243V270.391H149.766Z"
      fill="#5C2938"
    />
    <path
      d="M148.735 270.391C148.735 270.391 165.007 241.915 174.047 210.276C182.037 182.319 183.087 164.172 183.087 164.172L214.279 188.13C214.279 188.13 209.399 199.866 198.548 217.843L177.215 228.357L184.973 238.598C169.304 260.333 148.736 281.243 148.736 281.243V270.391H148.735Z"
      fill="#5C2938"
    />
    <path
      d="M95.646 50.28C95.646 50.28 71.064 21.732 31.014 15.784C31.014 15.784 23.086 13.801 24.275 27.283C25.462 40.765 30.619 69.314 50.84 90.33C50.84 90.329 94.851 65.745 95.646 50.28Z"
      fill="#E37C2F"
    />
    <path
      d="M52.823 83.589C52.823 83.589 39.341 64.952 35.375 40.764C35.375 40.764 33.392 33.23 40.133 36.402C46.876 39.574 67.098 49.089 79.788 60.589L52.823 83.589Z"
      fill="#FFAE5E"
    />
    <path
      d="M252.632 99.497C252.632 60.308 206.315 34.945 149.18 34.945C92.048 34.945 45.73 60.308 45.73 99.497C45.73 138.687 92.047 207.703 149.18 207.703C206.315 207.704 252.632 138.687 252.632 99.497Z"
      fill="#442282"
      opacity="0.49"
    />
    <path
      d="M203.038 50.28C203.038 50.28 227.62 21.732 267.672 15.784C267.672 15.784 275.602 13.801 274.411 27.283C273.222 40.765 268.065 69.314 247.844 90.33C247.843 90.329 203.832 65.745 203.038 50.28Z"
      fill="#E37C2F"
    />
    <path
      d="M245.862 83.589C245.862 83.589 259.344 64.952 263.308 40.764C263.308 40.764 265.296 33.23 258.552 36.402C251.811 39.574 231.585 49.089 218.897 60.589L245.862 83.589Z"
      fill="#FFAE5E"
    />
    <path
      d="M46.0509 99.497C46.0509 60.308 92.3679 34.945 149.505 34.945C206.635 34.945 252.952 60.308 252.952 99.497C252.952 138.687 206.635 207.703 149.505 207.703C92.3679 207.704 46.0509 138.687 46.0509 99.497Z"
      fill="#D16A01"
    />
    <path
      d="M149.505 34.946C127.662 34.946 107.412 38.663 90.7169 45.432C93.1069 47.98 140.584 99.747 133.025 186.045H146.895H151.79H165.657C157.949 97.996 207.527 45.891 208.058 45.335C191.407 38.627 171.243 34.946 149.505 34.946Z"
      fill="#E37C2F"
    />
    <path
      d="M214.108 53.713C212.85 63.314 188.227 67.955 161.471 63.281C134.708 58.608 114.965 50.427 116.627 35.799C117.73 26.174 140.831 21.854 167.592 26.532C194.352 31.204 215.891 40.134 214.108 53.713Z"
      fill="#5C2938"
    />
    <path
      d="M129.088 33.838C126.545 41.767 145.01 47.555 164.507 50.959C183.147 54.215 202.112 52.208 202.906 45.107C202.906 45.107 200.358 19.105 190.242 5.961C190.242 5.961 188.453 2.692 182.24 4.416C176.032 6.137 170.324 7.504 163.875 2.981C157.428 -1.543 154.825 0.660997 149.477 5.932C144.121 11.2 130.387 29.78 129.088 33.838Z"
      fill="#5C2938"
    />
    <path
      d="M166.069 37.786C145.357 34.753 137.707 28.347 134.894 24.336C131.916 28.59 129.586 32.283 129.088 33.838C126.545 41.767 145.01 47.555 164.507 50.959C183.147 54.215 202.112 52.208 202.906 45.107C202.906 45.107 202.439 40.43 201.145 34.065C196.533 37.64 186.9 40.839 166.069 37.786Z"
      fill="white"
    />
    <path
      d="M142.448 207.312C142.448 207.312 148.792 198.985 131.743 181.936C114.692 164.884 89.315 152.986 61.557 147.833C61.557 147.833 46.486 146.249 56.005 160.127C65.136 173.439 85.778 192.56 113.898 204.935C133.724 213.66 142.448 207.312 142.448 207.312Z"
      fill="#FFAE5E"
    />
    <path
      d="M80.015 125.112C80.015 125.112 100.616 109.049 111.738 133.255C111.738 133.254 93.076 155.394 80.015 125.112Z"
      fill="#442282"
      opacity="0.49"
    />
    <path
      d="M80.015 125.112C80.015 125.112 100.616 109.049 111.738 133.255C111.738 133.254 93.076 155.394 80.015 125.112Z"
      fill="white"
    />
    <path
      d="M85.1701 129.447C83.539 122.62 87.7461 115.759 94.5691 114.124C101.399 112.489 108.257 116.701 109.891 123.527C111.53 130.354 107.315 137.213 100.49 138.851C93.665 140.48 86.804 136.281 85.1701 129.447Z"
      fill="#19173E"
    />
    <path
      d="M95.598 125.494C95.179 123.726 93.397 122.635 91.629 123.061C89.856 123.482 88.766 125.264 89.189 127.034C89.617 128.803 91.39 129.89 93.162 129.472C94.933 129.044 96.026 127.269 95.598 125.494Z"
      fill="white"
    />
    <path
      d="M103.774 130.317C103.47 129.054 102.2 128.273 100.934 128.576C99.669 128.881 98.889 130.149 99.195 131.416C99.494 132.681 100.767 133.462 102.03 133.155C103.301 132.851 104.078 131.584 103.774 130.317Z"
      fill="white"
    />
    <path
      d="M156.237 207.312C156.237 207.312 149.893 198.985 166.942 181.936C183.994 164.884 209.37 152.986 237.129 147.833C237.129 147.833 252.197 146.249 242.681 160.127C233.552 173.439 212.906 192.56 184.788 204.935C164.959 213.66 156.237 207.312 156.237 207.312Z"
      fill="#FFAE5E"
    />
    <path
      d="M218.668 125.112C218.668 125.112 198.067 109.049 186.948 133.255C186.948 133.254 205.607 155.394 218.668 125.112Z"
      fill="#442282"
      opacity="0.49"
    />
    <path
      d="M218.668 125.112C218.668 125.112 198.067 109.049 186.948 133.255C186.948 133.254 205.607 155.394 218.668 125.112Z"
      fill="white"
    />
    <path
      d="M213.513 129.447C215.147 122.62 210.937 115.759 204.114 114.124C197.287 112.489 190.426 116.701 188.792 123.527C187.156 130.354 191.368 137.213 198.195 138.851C205.021 140.48 211.879 136.281 213.513 129.447Z"
      fill="#19173E"
    />
    <path
      d="M203.085 125.494C203.504 123.726 205.286 122.635 207.054 123.061C208.827 123.482 209.918 125.264 209.494 127.034C209.066 128.803 207.293 129.89 205.521 129.472C203.753 129.044 202.657 127.269 203.085 125.494Z"
      fill="white"
    />
    <path
      d="M194.911 130.317C195.213 129.054 196.483 128.273 197.748 128.576C199.013 128.881 199.793 130.149 199.489 131.416C199.188 132.681 197.915 133.462 196.652 133.155C195.383 132.851 194.607 131.584 194.911 130.317Z"
      fill="white"
    />
    <path
      d="M131.059 195.757C131.059 188.769 139.317 184.251 149.503 184.251C159.691 184.251 167.944 188.77 167.944 195.757C167.944 202.742 159.691 215.047 149.503 215.047C139.317 215.048 131.059 202.742 131.059 195.757Z"
      fill="#3F1722"
    />
    <path
      d="M154.888 224.21C154.888 220.966 152.257 218.337 149.018 218.337C145.774 218.337 143.148 220.966 143.148 224.21C143.148 227.449 145.774 230.08 149.018 230.08C152.256 230.08 154.888 227.449 154.888 224.21Z"
      fill="#4A5F71"
    />
    <path
      d="M152.108 221.877C152.108 221.877 168.444 215.215 175.353 212.727C182.264 210.239 184.522 214.083 184.654 218.263C184.788 222.442 183.188 234.532 179.604 239.84C176.013 245.148 169.492 240.687 167.114 239.388C161.933 236.563 151.441 226.171 151.441 226.171L152.108 221.877Z"
      fill="#4A5F71"
    />
    <path
      d="M145.613 221.877C145.613 221.877 129.277 215.215 122.368 212.727C115.457 210.239 113.199 214.083 113.067 218.263C112.933 222.442 114.533 234.532 118.114 239.84C121.707 245.148 128.228 240.687 130.604 239.388C135.788 236.563 146.28 226.171 146.28 226.171L145.613 221.877Z"
      fill="#4A5F71"
    />
  </g>
  <defs>
    <clipPath
      id="clip0"
    >
      <rect
        fill="white"
        height="300"
        width="300"
      />
    </clipPath>
  </defs>
</svg>
`;

exports[`Icons avatars should render "Koala" icon 1`] = `
<svg
  fill="none"
  height="300"
  viewBox="0 0 300 300"
  width="300"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M92.2 53.74C92.2 53.74 93.378 28.403 73.048 23.099C52.718 17.794 33.568 31.937 24.434 56.686C15.3 81.435 20.899 107.657 35.335 113.255C49.773 118.854 60.674 118.854 60.674 118.854L92.2 53.74Z"
    fill="#C2CBD4"
  />
  <path
    d="M83.654 59.043C83.654 59.043 82.769 42.544 71.279 36.946C59.789 31.348 42.994 38.419 36.808 58.159C30.621 77.9 20.604 112.666 57.431 110.308L83.654 59.043Z"
    fill="#606D7E"
  />
  <path
    d="M216.731 53.74C216.731 53.74 215.553 28.403 235.881 23.099C256.211 17.794 275.361 31.937 284.495 56.686C293.628 81.435 288.03 107.657 273.593 113.255C259.157 118.854 248.257 118.854 248.257 118.854L216.731 53.74Z"
    fill="#C2CBD4"
  />
  <path
    d="M225.276 59.043C225.276 59.043 226.158 42.544 237.649 36.946C249.139 31.348 265.934 38.419 272.12 58.159C278.308 77.9 288.325 112.666 251.496 110.308L225.276 59.043Z"
    fill="#606D7E"
  />
  <path
    d="M234.533 226.718C234.533 269.984 198.686 297.986 154.465 297.986C110.245 297.986 74.398 269.984 74.398 226.718C74.398 183.453 110.245 141.308 154.465 141.308C198.685 141.309 234.533 183.454 234.533 226.718Z"
    fill="#5C2938"
  />
  <path
    d="M217.807 227.916L194.063 231.239L194.813 236.597L218.557 233.273L217.807 227.916Z"
    fill="#3F1722"
  />
  <path
    d="M172.304 186.001C167.78 187.463 161.699 188.827 157.028 188.443L151.088 190.14C148.567 191.065 146.838 194.825 145.572 197.024C143.315 200.937 140.712 204.715 138.771 208.798C134.441 217.904 131.07 227.429 131.145 237.567C131.241 250.415 134.837 265.242 143.534 274.936C149.966 272.448 157.514 267.954 164.941 269.091C156.219 257.436 162.714 234.99 167.73 222.811C171.504 213.646 176.562 205.082 182.062 196.94C183.904 194.214 186.503 191.733 187.907 188.773C189.161 186.128 189.377 183.119 190.082 180.468C184.523 180.611 177.804 184.226 172.304 186.001Z"
    fill="#D16A01"
  />
  <path
    d="M225.683 157.043C222.911 148.132 212.69 146.3 204.528 146.438C188.905 146.7 173.483 150.608 158.28 154.178C146.196 157.016 134.101 157.709 121.93 155.864C111.234 154.244 102.484 147.918 92.111 145.588L86.171 148.982C76.56 159.97 77.301 174.991 87.529 185.875C97.783 196.787 113.228 200.623 127.33 201.502C141.439 202.38 156.278 201.226 169.665 198.955C181.881 196.883 196.947 194.209 207.946 188.018C219.104 181.736 230.011 170.963 225.683 157.043Z"
    fill="#E37C2F"
  />
  <path
    d="M194.284 196.078C192.205 189.861 188.158 184.548 183.77 179.955C179.072 175.039 173.315 169.723 167.213 166.697C160.878 163.553 156.142 162.142 149.391 163.818C144.163 165.117 137.229 166.842 132.842 169.772L131.57 171.045C142.752 179.037 151.352 188.031 155.319 201.594C157.182 207.963 158.311 214.716 157.877 221.535C157.502 227.429 154.445 231.744 150.835 236.394C162.131 241.284 175.973 244.581 186.627 235.434C196.895 226.617 198.321 208.15 194.284 196.078Z"
    fill="#FFAE5E"
  />
  <path
    d="M236.963 67.491C228.155 49.876 187.856 34.492 155.249 31.71V31.66C154.995 31.663 154.724 31.679 154.465 31.685C154.206 31.679 153.934 31.663 153.68 31.66V31.71C124.216 32.921 80.774 49.877 71.966 67.491C57.901 95.617 51.148 108.751 51.148 127.986C51.148 155.093 78.548 163.723 108.502 173.557C123.871 178.603 138.886 185.351 153.68 185.908V185.962C153.942 185.96 154.203 185.94 154.465 185.934C154.726 185.939 154.989 185.959 155.249 185.962V185.908C170.044 185.351 185.059 178.603 200.429 173.557C230.381 163.723 257.783 155.093 257.783 127.986C257.782 108.751 251.026 95.617 236.963 67.491Z"
    fill="#C2CBD4"
  />
  <path
    d="M155.249 31.709V31.659C154.995 31.662 154.724 31.678 154.465 31.684C154.206 31.678 153.934 31.662 153.68 31.659V31.709C134.795 32.485 110.179 39.734 92.61 49.474C106.75 50.214 149.225 57.11 148.572 113.452H150.536H158.395H160.357C159.701 57.019 202.321 50.192 216.391 49.471C199.531 40.264 175.857 33.467 155.249 31.709Z"
    fill="#606D7E"
  />
  <path
    d="M100.264 87.403C100.264 87.403 123.127 74.309 130.769 100.06C130.769 100.06 108.974 119.497 100.264 87.403Z"
    fill="#442282"
    opacity="0.49"
  />
  <path
    d="M100.264 87.403C100.264 87.403 123.127 74.309 130.769 100.06C130.769 100.06 108.974 119.497 100.264 87.403Z"
    fill="white"
  />
  <path
    d="M104.788 92.464C104.132 85.416 109.313 79.169 116.363 78.513C123.413 77.858 129.66 83.04 130.317 90.087C130.973 97.14 125.789 103.385 118.74 104.04C111.691 104.697 105.446 99.516 104.788 92.464Z"
    fill="#19173E"
  />
  <path
    d="M115.768 90.012C115.596 88.186 113.975 86.841 112.15 87.01C110.321 87.182 108.978 88.801 109.148 90.628C109.317 92.457 110.937 93.801 112.766 93.63C114.591 93.462 115.937 91.843 115.768 90.012Z"
    fill="white"
  />
  <path
    d="M120.873 98.586C122.184 98.586 123.246 97.5235 123.246 96.213C123.246 94.9024 122.184 93.84 120.873 93.84C119.562 93.84 118.5 94.9024 118.5 96.213C118.5 97.5235 119.562 98.586 120.873 98.586Z"
    fill="white"
  />
  <path
    d="M114.512 156.928C114.512 156.928 111.296 154.954 107.491 155.758C103.687 156.562 97.98 159.635 99.516 169.95C101.053 180.263 112.905 185.165 123.218 185.458C133.533 185.75 143.919 181.799 151.309 171.85C151.309 171.85 156.283 164.829 151.894 158.757C147.506 152.685 140.483 153.709 136.094 156.417C131.703 159.123 130.096 169.07 122.78 171.338C115.465 173.608 109.281 170.193 107.784 165.122C106.466 160.659 109.392 156.562 114.512 156.928Z"
    fill="#3F1722"
  />
  <path
    d="M208.665 87.403C208.665 87.403 185.804 74.309 178.16 100.06C178.16 100.06 199.955 119.497 208.665 87.403Z"
    fill="#442282"
    opacity="0.49"
  />
  <path
    d="M208.665 87.403C208.665 87.403 185.804 74.309 178.16 100.06C178.16 100.06 199.955 119.497 208.665 87.403Z"
    fill="white"
  />
  <path
    d="M204.141 92.464C204.797 85.416 199.614 79.169 192.566 78.513C185.517 77.858 179.268 83.04 178.613 90.087C177.957 97.14 183.141 103.385 190.19 104.04C197.238 104.697 203.484 99.516 204.141 92.464Z"
    fill="#19173E"
  />
  <path
    d="M196.473 93.645C198.309 93.645 199.797 92.1568 199.797 90.321C199.797 88.4852 198.309 86.997 196.473 86.997C194.637 86.997 193.149 88.4852 193.149 90.321C193.149 92.1568 194.637 93.645 196.473 93.645Z"
    fill="white"
  />
  <path
    d="M188.057 98.586C189.368 98.586 190.43 97.5235 190.43 96.213C190.43 94.9024 189.368 93.84 188.057 93.84C186.746 93.84 185.684 94.9024 185.684 96.213C185.684 97.5235 186.746 98.586 188.057 98.586Z"
    fill="white"
  />
  <path
    d="M194.416 156.928C194.416 156.928 197.634 154.954 201.439 155.758C205.243 156.562 210.951 159.635 209.414 169.95C207.878 180.263 196.026 185.165 185.712 185.458C175.399 185.75 165.011 181.799 157.623 171.85C157.623 171.85 152.649 164.829 157.037 158.757C161.427 152.685 168.449 153.709 172.837 156.417C177.227 159.123 178.836 169.07 186.151 171.338C193.467 173.608 199.651 170.193 201.147 165.122C202.464 160.659 199.537 156.562 194.416 156.928Z"
    fill="#3F1722"
  />
  <path
    d="M217.433 112.381H214.062C213.886 112.381 213.72 112.405 213.551 112.432C211.727 101.596 202.325 93.333 190.972 93.333C185.177 93.333 179.902 95.499 175.865 99.043H133.064C129.028 95.499 123.751 93.333 117.958 93.333C106.604 93.333 97.203 101.596 95.379 112.432C95.21 112.404 95.042 112.381 94.865 112.381H91.496C89.726 112.381 88.294 113.815 88.294 115.582C88.294 117.352 89.727 118.784 91.496 118.784H94.865C94.971 118.784 95.071 118.764 95.175 118.753C96.42 130.238 106.142 139.179 117.957 139.179C130.617 139.179 140.88 128.916 140.88 116.256C140.88 111.753 139.563 107.567 137.321 104.024H171.606C169.362 107.567 168.046 111.753 168.046 116.256C168.046 128.916 178.309 139.179 190.971 139.179C202.786 139.179 212.508 130.237 213.752 118.753C213.855 118.764 213.955 118.784 214.061 118.784H217.432C219.202 118.784 220.634 117.351 220.634 115.582C220.635 113.815 219.203 112.381 217.433 112.381ZM117.958 134.965C107.626 134.965 99.25 126.589 99.25 116.257C99.25 105.925 107.626 97.547 117.958 97.547C128.29 97.547 136.666 105.925 136.666 116.257C136.666 126.589 128.29 134.965 117.958 134.965ZM190.972 134.965C180.637 134.965 172.261 126.589 172.261 116.257C172.261 105.925 180.637 97.547 190.972 97.547C201.304 97.547 209.68 105.925 209.68 116.257C209.68 126.589 201.304 134.965 190.972 134.965Z"
    fill="#E37C2F"
  />
  <path
    d="M132.962 135.638C132.962 119.366 143.1 108.835 155.609 108.835C168.117 108.835 178.255 119.366 178.255 135.638C178.255 151.91 168.117 167.76 155.609 167.76C143.1 167.761 132.962 151.91 132.962 135.638Z"
    fill="#19173E"
  />
  <path
    d="M198.967 40.168C199.33 48.712 178.616 56.491 154.623 56.491C130.629 56.491 112.206 52.378 111.435 39.395C110.928 30.856 130.372 23.587 154.366 23.587C178.358 23.588 198.452 28.086 198.967 40.168Z"
    fill="#5C2938"
  />
  <path
    d="M121.975 35.797C120.969 43.083 137.912 45.31 155.394 45.31C172.105 45.31 188.299 40.682 187.914 34.383C187.914 34.383 181.745 12.146 170.946 2.24899C170.946 2.24899 168.891 -0.321015 163.749 2.12099C158.607 4.56298 153.851 6.61899 147.552 3.66299C141.256 0.707985 139.326 3.01999 135.472 8.41798C131.615 13.817 122.489 32.07 121.975 35.797Z"
    fill="#5C2938"
  />
  <path
    d="M154.751 33.613C136.27 34.121 128.64 29.711 125.583 26.648C123.638 30.802 122.172 34.368 121.975 35.797C120.969 43.083 137.912 45.31 155.394 45.31C172.105 45.31 188.299 40.682 187.914 34.383C187.914 34.383 186.797 30.386 184.705 25.044C181.231 28.857 173.339 33.102 154.751 33.613Z"
    fill="#3F1722"
  />
</svg>
`;

exports[`Icons avatars should render "Lion" icon 1`] = `
<svg
  fill="none"
  height="300"
  viewBox="0 0 300 300"
  width="300"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M222.28 235.581C222.28 274.167 190.311 299.14 150.874 299.14C111.438 299.14 79.469 274.166 79.469 235.581C79.469 196.998 111.438 159.411 150.874 159.411C190.311 159.411 222.28 196.997 222.28 235.581Z"
    fill="#3F1722"
  />
  <path
    d="M93.451 222.588L151.445 282.124L208.3 220.88C208.299 220.881 161.844 221.128 93.451 222.588Z"
    fill="#5C2938"
  />
  <path
    d="M149.299 298.965C149.61 298.967 149.917 298.981 150.229 298.981C150.973 298.981 151.711 298.955 152.451 298.936L150.037 239.555L149.299 298.965Z"
    fill="#5C2938"
  />
  <path
    d="M203.645 256.369L176.437 259.912L177.236 266.05L204.444 262.507L203.645 256.369Z"
    fill="#5C2938"
  />
  <path
    d="M151.025 0.962996V0.951996C151.01 0.951996 150.993 0.950996 150.978 0.950996C150.944 0.951996 150.91 0.954996 150.875 0.954996C150.84 0.954996 150.807 0.952996 150.773 0.950996C150.758 0.950996 150.74 0.951996 150.726 0.951996V0.962996C74.917 3.446 35.779 45.535 35.779 114.229C35.779 139.534 38.325 164.892 50.129 186.575C66.354 216.38 96.82 233.498 118.093 245.433C137.406 256.27 148.996 262.872 150.726 263.859V263.967C150.742 263.981 150.773 264.002 150.773 264.002C150.773 264.002 150.825 263.971 150.875 263.941C150.924 263.972 150.978 264.002 150.978 264.002C150.978 264.002 151.009 263.981 151.025 263.967V263.859C152.755 262.872 164.346 256.27 183.657 245.433C204.931 233.498 235.397 216.38 251.622 186.575C263.426 164.891 265.971 139.534 265.971 114.229C265.971 45.535 226.833 3.446 151.025 0.962996Z"
    fill="#E37C2F"
  />
  <path
    d="M104.492 47.294C104.492 47.294 108.206 43.58 103.033 37.078C97.858 30.577 84.062 22.881 76.497 32.566C68.934 42.251 81.542 51.71 95.869 50.345C101.44 49.815 104.492 47.294 104.492 47.294Z"
    fill="#D16A01"
  />
  <path
    d="M197.258 49.132C197.258 49.132 193.543 45.416 198.717 38.915C203.892 32.414 217.688 24.719 225.253 34.405C232.816 44.089 220.208 53.548 205.883 52.183C200.31 51.652 197.258 49.132 197.258 49.132Z"
    fill="#D16A01"
  />
  <path
    d="M204.457 45.55C204.457 45.55 203.065 44.158 205.005 41.721C206.943 39.284 212.113 36.401 214.948 40.03C217.783 43.66 213.058 47.203 207.689 46.693C205.602 46.495 204.457 45.55 204.457 45.55Z"
    fill="#FFAE5E"
  />
  <path
    d="M95.433 43.712C95.433 43.712 96.827 42.32 94.888 39.883C92.95 37.447 87.778 34.564 84.943 38.192C82.11 41.821 86.834 45.365 92.204 44.854C94.291 44.658 95.433 43.712 95.433 43.712Z"
    fill="#FFAE5E"
  />
  <path
    d="M151.376 25.955V25.95C151.242 25.95 151.11 25.945 150.976 25.945C150.943 25.945 150.91 25.945 150.876 25.945C150.842 25.945 150.809 25.945 150.776 25.945C150.642 25.945 150.509 25.95 150.374 25.95V25.955C116.604 26.128 86.846 40.722 89.381 78.994C92.169 121.076 107.235 127.035 115.291 154.01C122.982 179.763 133.902 195.971 150.374 196.364V196.369C150.508 196.371 150.641 196.4 150.776 196.4C150.809 196.4 150.842 196.393 150.876 196.393C150.91 196.393 150.943 196.4 150.976 196.4C151.11 196.4 151.242 196.372 151.376 196.369V196.364C167.848 195.971 178.768 179.764 186.46 154.01C194.517 127.035 209.582 121.076 212.37 78.994C214.906 40.722 185.147 26.128 151.376 25.955Z"
    fill="#FFAE5E"
  />
  <path
    d="M176.128 172.871C190.272 172.871 201.738 163.716 201.738 152.422C201.738 141.128 190.272 131.973 176.128 131.973C161.984 131.973 150.518 141.128 150.518 152.422C150.518 163.716 161.984 172.871 176.128 172.871Z"
    fill="#D16A01"
  />
  <path
    d="M125.623 172.871C139.767 172.871 151.233 163.716 151.233 152.422C151.233 141.128 139.767 131.973 125.623 131.973C111.479 131.973 100.013 141.128 100.013 152.422C100.013 163.716 111.479 172.871 125.623 172.871Z"
    fill="#D16A01"
  />
  <path
    d="M138.221 139.426C138.221 139.426 143.572 148.6 125.607 153.186C107.64 157.774 91.206 156.818 81.648 151.276C72.092 145.734 68.271 131.015 78.017 124.326C87.763 117.638 93.688 131.018 86.808 133.12C86.808 133.12 87.19 129.487 83.941 130.251C80.692 131.018 79.544 134.265 81.456 138.852C83.368 143.44 95.303 146.929 105.157 145.353C124.271 142.292 132.295 128.912 138.221 139.426Z"
    fill="#5C2938"
  />
  <path
    d="M163.528 139.426C163.528 139.426 158.177 148.6 176.142 153.186C194.107 157.774 210.543 156.818 220.101 151.276C229.657 145.734 233.477 131.015 223.732 124.326C213.986 117.638 208.061 131.018 214.941 133.12C214.941 133.12 214.559 129.487 217.808 130.251C221.056 131.018 222.204 134.265 220.293 138.852C218.38 143.44 206.445 146.929 196.592 145.353C177.48 142.292 169.454 128.912 163.528 139.426Z"
    fill="#5C2938"
  />
  <path
    d="M196.724 39.635L197.816 39.587L197.027 38.514C185.612 29.31 169.011 23.576 151.44 23.488H150.438C132.326 23.58 111.014 29.01 103.936 39.748C109.013 40.583 138.677 46.77 141.255 77.707C144.076 111.549 135.145 131.29 135.145 131.29C135.58 143.703 148.111 136.549 149.953 135.428C151.794 136.549 164.324 143.702 164.76 131.29C164.76 131.29 155.83 111.549 158.65 77.707C161.471 43.865 196.724 39.635 196.724 39.635Z"
    fill="#D16A01"
  />
  <path
    d="M169.757 136.096C169.757 129.964 160.032 128.699 150.875 128.699C141.717 128.699 131.993 129.964 131.993 136.096C131.993 142.226 141.717 153.421 150.875 153.421C160.032 153.421 169.757 142.226 169.757 136.096Z"
    fill="#3F1722"
  />
  <path
    d="M200.863 102.289C200.716 100.785 199.452 99.596 197.912 99.596H170.146C170.122 99.596 170.101 99.602 170.078 99.603C169.367 99.41 160.046 96.931 151.153 96.931C141.986 96.931 132.316 99.622 132.316 99.622L132.331 99.696C132.098 99.637 131.857 99.596 131.605 99.596H103.839C102.299 99.596 101.035 100.785 100.889 102.289H96.37V105.495H100.858V109.44C100.858 111.079 102.198 112.42 103.838 112.42H131.604C133.181 112.42 134.468 111.176 134.566 109.624C134.935 107.923 137.381 100.127 151.321 100.127C163.241 100.127 166.415 106.797 167.167 109.148V109.44C167.167 111.079 168.507 112.42 170.147 112.42H197.913C199.552 112.42 200.894 111.08 200.894 109.44V105.495H205.382V102.289H200.863V102.289ZM131.604 109.44H103.838V102.575H131.604V109.44ZM197.912 109.44H170.146V102.575H197.912V109.44Z"
    fill="white"
  />
  <path
    d="M108.033 76.839C108.033 76.839 126.926 71.702 127.6 91.658C127.6 91.658 108.284 101.554 108.033 76.839Z"
    fill="#442282"
    opacity="0.49"
  />
  <path
    d="M108.033 76.839C108.033 76.839 126.926 71.702 127.6 91.658C127.6 91.658 108.284 101.554 108.033 76.839Z"
    fill="white"
  />
  <path
    d="M110.336 81.328C111.187 76.134 116.084 72.612 121.276 73.46C126.471 74.312 129.992 79.208 129.143 84.401C128.295 89.596 123.396 93.117 118.205 92.269C113.01 91.419 109.488 86.523 110.336 81.328Z"
    fill="#3F1722"
  />
  <path
    d="M118.692 81.619C118.912 80.277 118 79.005 116.652 78.784C115.306 78.565 114.036 79.478 113.815 80.824C113.596 82.17 114.509 83.441 115.857 83.662C117.201 83.88 118.473 82.968 118.692 81.619Z"
    fill="white"
  />
  <path
    d="M121.204 88.803C122.179 88.803 122.969 88.0128 122.969 87.038C122.969 86.0632 122.179 85.273 121.204 85.273C120.229 85.273 119.439 86.0632 119.439 87.038C119.439 88.0128 120.229 88.803 121.204 88.803Z"
    fill="white"
  />
  <path
    d="M193.717 76.839C193.717 76.839 174.824 71.702 174.15 91.658C174.15 91.658 193.466 101.554 193.717 76.839Z"
    fill="white"
  />
  <path
    d="M191.413 81.328C190.56 76.134 185.665 72.612 180.472 73.46C175.278 74.312 171.757 79.208 172.606 84.401C173.453 89.596 178.353 93.117 183.544 92.269C188.74 91.419 192.26 86.523 191.413 81.328Z"
    fill="#3F1722"
  />
  <path
    d="M183.059 81.619C182.838 80.277 183.75 79.005 185.098 78.784C186.444 78.565 187.713 79.478 187.935 80.824C188.154 82.17 187.241 83.441 185.894 83.662C184.549 83.88 183.277 82.968 183.059 81.619Z"
    fill="white"
  />
  <path
    d="M180.546 88.803C181.521 88.803 182.311 88.0128 182.311 87.038C182.311 86.0632 181.521 85.273 180.546 85.273C179.571 85.273 178.781 86.0632 178.781 87.038C178.781 88.0128 179.571 88.803 180.546 88.803Z"
    fill="white"
  />
</svg>
`;

exports[`Icons avatars should render "Owl" icon 1`] = `
<svg
  fill="none"
  height="300"
  viewBox="0 0 300 300"
  width="300"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M229.364 230.358C229.364 272.46 194.481 299.709 151.45 299.709C108.42 299.709 73.538 272.46 73.538 230.358C73.538 188.258 108.421 147.247 151.45 147.247C194.481 147.247 229.364 188.257 229.364 230.358Z"
    fill="#3F1722"
  />
  <path
    d="M110.901 176.814L151.242 241.775L190.342 174.954C190.343 174.954 147.312 147.023 110.901 176.814Z"
    fill="#E8DFCE"
  />
  <path
    d="M151.834 238.595L114.753 171.317L105.96 149.527L80.73 168.259L109.564 201.896H122.779L115.549 208.879L151.834 251.21V238.595Z"
    fill="#5C2938"
  />
  <path
    d="M151.069 238.595L188.149 171.317L196.941 149.527L222.171 168.259L193.338 201.896H180.12L187.351 208.879L151.069 251.21V238.595Z"
    fill="#5C2938"
  />
  <path
    d="M150.435 299.689C150.776 299.691 151.11 299.708 151.45 299.708C152.262 299.708 153.066 299.679 153.875 299.66L151.241 237.849L150.435 299.689Z"
    fill="#5C2938"
  />
  <path
    d="M157.583 193.87C157.583 190.386 154.757 187.562 151.276 187.562C147.792 187.562 144.967 190.387 144.967 193.87C144.967 197.352 147.793 200.177 151.276 200.177C154.757 200.177 157.583 197.353 157.583 193.87Z"
    fill="#E37C2F"
  />
  <path
    d="M148.415 191.366C148.415 191.366 133.489 184.207 127.176 181.536C120.864 178.865 118.8 182.992 118.678 187.482C118.557 191.973 120.014 204.962 123.291 210.665C126.568 216.369 132.527 211.572 134.7 210.179C139.433 207.145 149.02 195.978 149.02 195.978L148.415 191.366Z"
    fill="#E37C2F"
  />
  <path
    d="M154.486 191.366C154.486 191.366 169.414 184.207 175.726 181.536C182.038 178.865 184.102 182.992 184.222 187.482C184.343 191.973 182.886 204.962 179.609 210.665C176.332 216.369 170.372 211.572 168.201 210.179C163.467 207.145 153.878 195.978 153.878 195.978L154.486 191.366Z"
    fill="#E37C2F"
  />
  <path
    d="M204.114 243.331L204.113 243.329L198.536 231.73C196.484 227.466 193.129 227.465 191.075 231.73L188.134 237.849L187.272 239.642L185.497 243.329V243.331L181.768 251.086H190.374H199.239H207.845L204.114 243.331Z"
    fill="#E37C2F"
  />
  <path
    d="M209.866 249.715H179.928V256.47H209.866V249.715Z"
    fill="#5C2938"
  />
  <path
    d="M94.488 29.17C94.488 29.17 60.696 27.249 51.863 1.329C51.863 1.329 38.997 6.706 50.71 24.37C50.71 24.37 42.26 25.521 39.381 21.298C39.381 21.298 36.31 30.13 45.909 41.458C45.909 41.458 41.685 44.532 38.613 40.5C38.613 40.5 36.31 51.443 47.253 56.435C47.253 56.435 38.805 58.738 44.566 64.882C50.325 71.028 66.646 84.468 80.663 81.971C94.68 79.475 100.824 48.178 94.488 29.17Z"
    fill="#3F1722"
  />
  <path
    d="M208.414 29.17C208.414 29.17 242.207 27.249 251.04 1.329C251.04 1.329 263.904 6.706 252.193 24.37C252.193 24.37 260.641 25.521 263.52 21.298C263.52 21.298 266.591 30.13 256.992 41.458C256.992 41.458 261.216 44.532 264.288 40.5C264.288 40.5 266.591 51.443 255.646 56.435C255.646 56.435 264.095 58.738 258.336 64.882C252.577 71.028 236.255 84.468 222.239 81.971C208.221 79.475 202.077 48.178 208.414 29.17Z"
    fill="#3F1722"
  />
  <path
    d="M236.861 110.633C232.616 88.599 232.439 51.203 222.213 37.105C209.912 20.15 173.864 23.839 152.832 23.839C152.559 23.839 152.275 23.836 151.997 23.836V23.832C151.811 23.833 151.635 23.833 151.451 23.833C151.267 23.833 151.09 23.833 150.904 23.832V23.836C150.626 23.836 150.342 23.839 150.071 23.839C129.038 23.839 92.991 20.15 80.69 37.105C70.462 51.203 70.286 88.599 66.04 110.633C51.451 186.331 108.481 182.817 151.452 182.786C194.421 182.817 251.451 186.331 236.861 110.633Z"
    fill="#A06F60"
  />
  <path
    d="M135.526 122.866C123.879 139.064 99.606 141.531 81.31 128.376C63.014 115.221 54.245 78.182 65.891 61.986C77.538 45.788 105.193 56.563 123.488 69.719C141.785 82.873 147.172 106.67 135.526 122.866Z"
    fill="#3F1722"
  />
  <path
    d="M77.697 87.012C77.697 87.012 102.612 75.663 108.039 103.045C108.038 103.045 83.615 121.053 77.697 87.012Z"
    fill="#442282"
    opacity="0.49"
  />
  <path
    d="M77.697 87.012C77.697 87.012 102.612 75.663 108.039 103.045C108.038 103.045 83.615 121.053 77.697 87.012Z"
    fill="white"
  />
  <path
    d="M95.21 106.004C102.566 106.004 108.53 100.04 108.53 92.684C108.53 85.3276 102.566 79.364 95.21 79.364C87.8535 79.364 81.89 85.3276 81.89 92.684C81.89 100.04 87.8535 106.004 95.21 106.004Z"
    fill="#19173E"
  />
  <path
    d="M90.029 94.658C91.936 94.658 93.482 93.112 93.482 91.205C93.482 89.298 91.936 87.752 90.029 87.752C88.122 87.752 86.576 89.298 86.576 91.205C86.576 93.112 88.122 94.658 90.029 94.658Z"
    fill="white"
  />
  <path
    d="M98.171 100.579C99.5335 100.579 100.638 99.4745 100.638 98.112C100.638 96.7495 99.5335 95.645 98.171 95.645C96.8085 95.645 95.704 96.7495 95.704 98.112C95.704 99.4745 96.8085 100.579 98.171 100.579Z"
    fill="white"
  />
  <path
    d="M167.377 122.866C179.024 139.064 203.296 141.531 221.591 128.376C239.887 115.221 248.656 78.182 237.008 61.986C225.361 45.788 197.707 56.563 179.413 69.719C161.116 82.873 155.731 106.67 167.377 122.866Z"
    fill="#3F1722"
  />
  <path
    d="M225.206 87.012C225.206 87.012 200.29 75.663 194.863 103.045C194.863 103.045 219.286 121.053 225.206 87.012Z"
    fill="white"
  />
  <path
    d="M225.206 87.012C225.206 87.012 200.29 75.663 194.863 103.045C194.863 103.045 219.286 121.053 225.206 87.012Z"
    fill="#19173E"
  />
  <path
    d="M212.872 94.66C214.78 94.66 216.327 93.1131 216.327 91.205C216.327 89.2969 214.78 87.75 212.872 87.75C210.964 87.75 209.417 89.2969 209.417 91.205C209.417 93.1131 210.964 94.66 212.872 94.66Z"
    fill="white"
  />
  <path
    d="M204.732 100.579C206.094 100.579 207.199 99.4745 207.199 98.112C207.199 96.7495 206.094 95.645 204.732 95.645C203.37 95.645 202.265 96.7495 202.265 98.112C202.265 99.4745 203.37 100.579 204.732 100.579Z"
    fill="white"
  />
  <path
    d="M151.452 138.898L138.544 110.284C138.544 110.284 143.31 105.844 151.204 105.844C158.604 105.844 164.36 110.284 164.36 110.284L151.452 138.898Z"
    fill="#D31E25"
  />
  <path
    d="M198.502 25.109C183.451 22.516 165.443 23.838 152.832 23.838C152.559 23.838 152.275 23.835 151.997 23.835V23.831C151.811 23.832 151.635 23.832 151.451 23.832C151.267 23.832 151.09 23.832 150.904 23.831V23.835C150.626 23.835 150.342 23.838 150.071 23.838C137.027 23.838 118.215 22.423 102.866 25.389C123.548 35.641 137.36 64.674 151.455 64.674C165.573 64.675 173.554 34.751 198.502 25.109Z"
    fill="#CCB5A7"
  />
</svg>
`;

exports[`Icons avatars should render "Penguin" icon 1`] = `
<svg
  fill="none"
  height="300"
  viewBox="0 0 300 300"
  width="300"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    clipPath="url(#clip0)"
  >
    <path
      d="M208.431 85.252C205.915 53.937 182.4 23.224 150.287 23.224C150.22 23.224 150.153 23.229 150.086 23.229C150.019 23.229 149.951 23.224 149.883 23.224C117.771 23.224 94.256 53.936 91.739 85.252C83.901 182.69 80.079 177.396 75.964 230.318C75.805 232.324 224.365 232.324 224.207 230.318C220.093 177.397 216.271 182.69 208.431 85.252Z"
      fill="#19173E"
    />
    <path
      d="M202.544 100.411C200.28 72.254 179.139 44.641 150.267 44.641C150.207 44.641 150.146 44.648 150.087 44.648C150.026 44.648 149.966 44.641 149.905 44.641C121.034 44.641 99.893 72.254 97.629 100.411C90.582 188.011 87.146 183.254 83.444 230.833C83.304 232.634 216.868 232.634 216.727 230.833C213.027 183.254 209.591 188.011 202.544 100.411Z"
      fill="#E8DFCE"
    />
    <path
      d="M88.835 185.429C78.166 199.394 76.096 216.788 76.096 234.387C76.096 274.371 109.223 300.244 150.086 300.244C190.95 300.244 224.076 274.371 224.076 234.387C224.076 216.825 222.037 199.47 211.407 185.519C194.162 189.107 169.217 194.476 150.493 194.476C131.619 194.476 106.34 189.058 88.835 185.429Z"
      fill="#19173E"
    />
    <path
      d="M110.102 34.501C110.102 34.501 104.139 23.462 143.317 21.978C179.257 20.616 180.191 25.529 180.618 29.6C181.163 34.774 175.444 40.49 144.407 41.854C110.861 43.326 110.102 34.501 110.102 34.501Z"
      fill="#4A5F71"
    />
    <path
      d="M118.541 30.688C118.541 30.688 139.778 41.307 169.727 27.967C169.727 27.967 170.27 0.739997 142.773 1.011C115.275 1.287 118.541 30.688 118.541 30.688Z"
      fill="#4A5F71"
    />
    <path
      d="M169.727 27.967C169.727 27.967 169.801 24.001 168.37 19.115C164.221 21.936 156.708 25.324 144.134 25.79C129.489 26.332 122.074 24.355 118.728 22.964C118.178 27.377 118.541 30.689 118.541 30.689C118.541 30.689 139.778 41.307 169.727 27.967Z"
      fill="white"
    />
    <path
      d="M179.525 53.208C171.236 46.941 161.333 43.116 150.35 43.116C150.287 43.116 150.224 43.121 150.162 43.121C150.099 43.121 150.036 43.116 149.972 43.116C138.924 43.116 128.965 46.984 120.647 53.323C129.661 55.278 149.836 64.701 146.844 110.057L149.795 109.83L152.746 110.057C149.687 63.678 170.839 54.875 179.525 53.208Z"
      fill="#19173E"
    />
    <path
      d="M137.503 108.245L150.085 132.182L162.667 108.245C162.667 108.245 156.561 103.74 150.085 103.74C143.888 103.74 137.503 108.245 137.503 108.245Z"
      fill="#D31E25"
    />
    <path
      d="M114.4 87.205C114.4 87.205 129.623 82.68 130.547 98.849C130.546 98.849 115.074 107.24 114.4 87.205Z"
      fill="#442282"
      opacity="0.49"
    />
    <path
      d="M114.4 87.205C114.4 87.205 129.623 82.68 130.547 98.849C130.546 98.849 115.074 107.24 114.4 87.205Z"
      fill="white"
    />
    <path
      d="M116.354 90.802C116.946 86.577 120.849 83.624 125.073 84.215C129.301 84.806 132.249 88.708 131.66 92.935C131.071 97.165 127.167 100.11 122.941 99.522C118.713 98.932 115.765 95.032 116.354 90.802Z"
      fill="#19173E"
    />
    <path
      d="M123.134 90.878C123.288 89.782 122.524 88.772 121.426 88.62C120.331 88.466 119.32 89.23 119.166 90.328C119.014 91.421 119.777 92.432 120.873 92.59C121.969 92.74 122.983 91.976 123.134 90.878Z"
      fill="white"
    />
    <path
      d="M126.691 95.42C126.801 94.639 126.253 93.919 125.472 93.804C124.688 93.697 123.965 94.241 123.856 95.024C123.746 95.807 124.291 96.532 125.075 96.64C125.861 96.75 126.581 96.206 126.691 95.42Z"
      fill="white"
    />
    <path
      d="M185.772 87.205C185.772 87.205 170.546 82.68 169.622 98.849C169.622 98.849 185.096 107.24 185.772 87.205Z"
      fill="#442282"
      opacity="0.49"
    />
    <path
      d="M185.772 87.205C185.772 87.205 170.546 82.68 169.622 98.849C169.622 98.849 185.096 107.24 185.772 87.205Z"
      fill="white"
    />
    <path
      d="M176.164 99.596C180.432 99.596 183.891 96.1365 183.891 91.869C183.891 87.6015 180.432 84.142 176.164 84.142C171.897 84.142 168.437 87.6015 168.437 91.869C168.437 96.1365 171.897 99.596 176.164 99.596Z"
      fill="#19173E"
    />
    <path
      d="M177.037 90.878C176.883 89.782 177.647 88.772 178.743 88.62C179.839 88.466 180.852 89.23 181.004 90.328C181.158 91.421 180.394 92.432 179.298 92.59C178.202 92.74 177.187 91.976 177.037 90.878Z"
      fill="white"
    />
    <path
      d="M173.48 95.42C173.37 94.639 173.916 93.919 174.698 93.804C175.484 93.697 176.205 94.241 176.315 95.024C176.423 95.807 175.88 96.532 175.093 96.64C174.311 96.75 173.589 96.206 173.48 95.42Z"
      fill="white"
    />
    <path
      d="M149.888 245.23L182.292 189.851C171.706 191.323 160.816 192.299 150.493 192.299C139.073 192.299 126.906 191.105 115.195 189.365L149.888 245.23Z"
      fill="white"
    />
    <path
      d="M180.378 107.218H168.345C166.474 107.218 164.839 108.206 163.906 109.681C162.748 107.465 161.488 102.884 160.653 99.853C158.299 91.282 155.863 82.42 150.1 82.376C150.087 82.376 150.072 82.376 150.059 82.376C144.359 82.376 141.906 91.023 139.534 99.384C138.76 102.113 137.376 106.974 136.096 109.427C135.141 108.094 133.588 107.218 131.826 107.218H119.794C116.89 107.218 114.527 109.58 114.527 112.482V119.162C114.527 122.066 116.89 124.426 119.794 124.426H131.826C134.729 124.426 137.093 122.066 137.093 119.162V113.873C139.8 111.982 141.301 106.725 143.096 100.394C144.812 94.354 147.158 86.078 150.061 86.078C150.066 86.078 150.071 86.078 150.071 86.078C153.035 86.1 155.471 94.966 157.083 100.834C158.85 107.265 160.313 112.554 163.081 114.142V119.162C163.081 122.066 165.442 124.426 168.346 124.426H180.379C183.281 124.426 185.645 122.066 185.645 119.162V112.482C185.644 109.58 183.28 107.218 180.378 107.218ZM132.736 119.162C132.736 119.653 132.319 120.07 131.826 120.07H119.794C119.302 120.07 118.884 119.653 118.884 119.162V112.482C118.884 111.994 119.303 111.574 119.794 111.574H131.826C132.319 111.574 132.736 111.994 132.736 112.482V119.162ZM181.288 119.162C181.288 119.653 180.869 120.07 180.378 120.07H168.345C167.853 120.07 167.436 119.653 167.436 119.162V112.482C167.436 111.994 167.853 111.574 168.345 111.574H180.378C180.87 111.574 181.288 111.994 181.288 112.482V119.162Z"
      fill="#4A5F71"
    />
    <path
      d="M149.122 300.228C149.445 300.231 149.763 300.243 150.086 300.243C150.857 300.243 151.621 300.219 152.388 300.199L149.885 241.503L149.122 300.228Z"
      fill="#4A5F71"
    />
    <path
      d="M203.727 237.593L198.285 227.103C196.281 223.245 193.72 223.52 192.59 227.718L190.968 233.736L190.494 235.501L189.517 239.128L187.462 246.76L194.031 246.047L200.8 245.315L207.367 244.605L203.727 237.593Z"
      fill="white"
    />
    <path
      d="M208.783 243.141L185.93 245.616L186.621 251.991L209.473 249.515L208.783 243.141Z"
      fill="#4A5F71"
    />
    <path
      d="M211.106 185.118C201.679 187.124 188.999 189.033 178.287 190.38L149.722 242.211V254.189L184.178 213.99L177.309 207.359H189.862L211.106 185.118Z"
      fill="#4A5F71"
    />
    <path
      d="M110.308 207.359H122.858L115.992 213.99L150.448 254.189V242.211L121.832 190.288C111.107 188.919 98.402 187.001 88.962 184.997L110.308 207.359Z"
      fill="#4A5F71"
    />
    <path
      d="M149.918 205.727C153.226 205.727 155.908 203.045 155.908 199.737C155.908 196.429 153.226 193.747 149.918 193.747C146.61 193.747 143.928 196.429 143.928 199.737C143.928 203.045 146.61 205.727 149.918 205.727Z"
      fill="#D31E25"
    />
    <path
      d="M147.205 197.361C147.205 197.361 133.029 190.562 127.034 188.023C121.041 185.485 119.081 189.405 118.965 193.671C118.85 197.937 120.234 210.272 123.346 215.685C126.458 221.103 132.116 216.546 134.181 215.226C138.675 212.341 147.78 201.739 147.78 201.739L147.205 197.361Z"
      fill="#D31E25"
    />
    <path
      d="M152.967 197.361C152.967 197.361 167.143 190.562 173.138 188.023C179.131 185.485 181.091 189.405 181.207 193.671C181.32 197.937 179.937 210.272 176.826 215.685C173.714 221.103 168.056 216.546 165.991 215.226C161.496 212.341 152.391 201.739 152.391 201.739L152.967 197.361Z"
      fill="#D31E25"
    />
  </g>
  <defs>
    <clipPath
      id="clip0"
    >
      <rect
        fill="white"
        height="300"
        width="300"
      />
    </clipPath>
  </defs>
</svg>
`;

exports[`Icons avatars should render "Pig" icon 1`] = `
<svg
  fill="none"
  height="300"
  viewBox="0 0 300 300"
  width="300"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M116.436 48.845C116.436 48.845 120.428 28.537 88.1521 12.22C55.8791 -4.096 27.9611 0.980001 27.9611 0.980001C27.9611 0.980001 37.7511 12.222 46.8151 30.714C55.8791 49.207 65.3061 62.987 90.6901 61.174C116.073 59.359 116.436 48.845 116.436 48.845Z"
    fill="#E37B62"
  />
  <path
    d="M86.3401 57.546C86.3401 57.546 63.1311 52.108 54.7901 29.264C54.7901 29.264 53.7041 25.636 60.9571 25.999C68.2091 26.362 90.6931 25.999 103.02 50.658C103.02 50.658 101.205 59.724 86.3401 57.546Z"
    fill="#FFD1BA"
  />
  <path
    d="M185.025 48.845C185.025 48.845 181.036 28.537 213.306 12.22C245.582 -4.096 273.5 0.980001 273.5 0.980001C273.5 0.980001 263.707 12.222 254.643 30.714C245.582 49.207 236.155 62.987 210.771 61.174C185.385 59.359 185.025 48.845 185.025 48.845Z"
    fill="#E37B62"
  />
  <path
    d="M215.121 57.546C215.121 57.546 238.327 52.108 246.668 29.264C246.668 29.264 247.754 25.636 240.501 25.999C233.252 26.362 210.768 25.999 198.438 50.658C198.438 50.658 200.255 59.724 215.121 57.546Z"
    fill="#FFD1BA"
  />
  <path
    d="M236.319 223.147C236.319 269.592 197.834 299.653 150.362 299.653C102.895 299.653 64.41 269.591 64.41 223.147C64.41 176.702 102.895 131.46 150.362 131.46C197.834 131.46 236.319 176.702 236.319 223.147Z"
    fill="#4A5F71"
  />
  <path
    d="M148.468 299.632C148.842 299.635 149.211 299.653 149.585 299.653C150.484 299.653 151.368 299.62 152.261 299.6L149.355 231.411L148.468 299.632Z"
    fill="#606D7E"
  />
  <path
    d="M106.544 164.077L151.051 262.061L194.186 162.024C194.185 162.024 146.713 131.213 106.544 164.077Z"
    fill="white"
  />
  <path
    d="M218.65 253.326H185.623V260.777H218.65V253.326Z"
    fill="#606D7E"
  />
  <path
    d="M98.8721 133.697L76.7521 160.892C77.4951 177.712 81.0651 192.174 86.2191 204.595L119.178 205.494L101.024 230.491C122.5 258.97 150.365 269.677 150.365 269.677V260.249L98.8721 133.697Z"
    fill="#606D7E"
  />
  <path
    d="M201.855 133.697L223.978 160.892C223.232 177.712 219.666 192.174 214.509 204.595L181.55 205.494L199.704 230.491C178.228 258.97 150.366 269.677 150.366 269.677V260.249L201.855 133.697Z"
    fill="#606D7E"
  />
  <path
    d="M150.169 204.808C154.012 204.808 157.127 201.693 157.127 197.85C157.127 194.007 154.012 190.892 150.169 190.892C146.326 190.892 143.211 194.007 143.211 197.85C143.211 201.693 146.326 204.808 150.169 204.808Z"
    fill="#19173E"
  />
  <path
    d="M151.595 193.165C151.595 193.165 191.121 172.859 195.11 183.738C199.096 194.617 213.652 235.169 150.169 197.85C150.169 197.85 148.692 199.33 151.595 193.165Z"
    fill="#19173E"
  />
  <path
    d="M146.517 193.165C146.517 193.165 106.994 172.859 103.002 183.738C99.0161 194.617 84.4631 235.169 147.946 197.85C147.946 197.85 149.421 199.33 146.517 193.165Z"
    fill="#19173E"
  />
  <path
    d="M232.9 75.679C225.665 63.676 218.534 51.528 208.239 44.132C196.637 35.791 173.1 35.065 151.099 35.065C150.974 35.065 150.852 35.071 150.73 35.075C150.605 35.071 150.483 35.065 150.362 35.065C128.361 35.065 104.823 35.791 93.219 44.132C82.924 51.528 75.794 63.676 68.558 75.679C57.762 93.603 49.182 112.846 49.182 128.667C49.182 156.855 73.034 170.87 101.559 180.473C117.119 185.714 130.637 192.845 150.361 192.845C150.483 192.845 150.605 192.842 150.729 192.841C150.851 192.842 150.973 192.845 151.098 192.845C170.822 192.845 184.338 185.714 199.903 180.473C228.422 170.87 252.275 156.855 252.275 128.667C252.276 112.845 243.699 93.603 232.9 75.679Z"
    fill="#EA9479"
  />
  <path
    d="M196.198 100.735C204.845 112.294 170.097 126.875 150.872 126.875C131.644 126.875 97.8651 112.469 106.272 100.735C116.428 86.556 131.644 74.59 150.872 74.59C170.097 74.59 185.317 86.193 196.198 100.735Z"
    fill="#E37B62"
  />
  <path
    d="M151.235 134.126C178.071 134.126 199.825 122.423 199.825 107.986C199.825 93.5493 178.071 81.846 151.235 81.846C124.4 81.846 102.645 93.5493 102.645 107.986C102.645 122.423 124.4 134.126 151.235 134.126Z"
    fill="#FFD1BA"
  />
  <path
    d="M135.642 105.774C135.642 103.371 133.697 101.422 131.29 101.422C128.886 101.422 126.938 103.371 126.938 105.774C126.938 108.177 128.886 110.126 131.29 110.126C133.697 110.126 135.642 108.177 135.642 105.774Z"
    fill="#E37B62"
  />
  <path
    d="M109.172 152.552C109.172 152.552 103.008 151.102 99.0191 157.266C95.0271 163.431 100.045 173.51 112.435 174.308C123.677 175.034 141.448 163.792 146.52 136.597C146.52 136.597 146.883 129.343 140.719 127.169C133.41 124.589 126.58 129.708 124.4 138.772C123.144 144.014 121.863 153.64 118.236 159.079C114.61 164.52 110.09 165.502 107.357 161.254C104.094 156.177 109.172 152.552 109.172 152.552Z"
    fill="#5C2938"
  />
  <path
    d="M92.6801 76.776C92.6801 76.776 101.679 61.901 114.332 74.321C114.332 74.321 107.976 92.511 92.6801 76.776Z"
    fill="#442282"
    opacity="0.49"
  />
  <path
    d="M92.6801 76.776C92.6801 76.776 101.679 61.901 114.332 74.321C114.332 74.321 107.976 92.511 92.6801 76.776Z"
    fill="white"
  />
  <path
    d="M96.9101 78.25C94.2791 74.388 95.266 69.126 99.124 66.492C102.985 63.858 108.247 64.849 110.884 68.706C113.515 72.566 112.526 77.829 108.667 80.464C104.806 83.101 99.5471 82.109 96.9101 78.25Z"
    fill="#19173E"
  />
  <path
    d="M102.458 73.321C101.78 72.323 100.411 72.064 99.4101 72.748C98.4091 73.429 98.1571 74.797 98.8371 75.796C99.5201 76.797 100.884 77.055 101.891 76.369C102.887 75.687 103.145 74.323 102.458 73.321Z"
    fill="white"
  />
  <path
    d="M108.684 74.383C108.199 73.667 107.221 73.486 106.507 73.972C105.795 74.46 105.611 75.436 106.099 76.151C106.587 76.865 107.559 77.048 108.276 76.558C108.991 76.073 109.178 75.097 108.684 74.383Z"
    fill="white"
  />
  <path
    d="M170.17 110.125C172.573 110.125 174.521 108.177 174.521 105.774C174.521 103.371 172.573 101.423 170.17 101.423C167.767 101.423 165.819 103.371 165.819 105.774C165.819 108.177 167.767 110.125 170.17 110.125Z"
    fill="#E37B62"
  />
  <path
    d="M192.286 152.552C192.286 152.552 198.45 151.102 202.439 157.266C206.431 163.431 201.413 173.51 189.026 174.308C177.781 175.034 160.013 163.792 154.939 136.597C154.939 136.597 154.576 129.343 160.74 127.169C168.052 124.589 174.882 129.708 177.059 138.772C178.318 144.014 179.599 153.64 183.223 159.079C186.849 164.52 191.371 165.502 194.101 161.254C197.364 156.177 192.286 152.552 192.286 152.552Z"
    fill="#5C2938"
  />
  <path
    d="M208.781 76.776C208.781 76.776 199.779 61.901 187.126 74.321C187.126 74.321 193.485 92.511 208.781 76.776Z"
    fill="#442282"
    opacity="0.49"
  />
  <path
    d="M208.781 76.776C208.781 76.776 199.779 61.901 187.126 74.321C187.126 74.321 193.485 92.511 208.781 76.776Z"
    fill="white"
  />
  <path
    d="M204.548 78.25C207.179 74.388 206.192 69.126 202.334 66.492C198.472 63.858 193.21 64.849 190.576 68.706C187.942 72.566 188.932 77.829 192.79 80.464C196.652 83.101 201.911 82.109 204.548 78.25Z"
    fill="#19173E"
  />
  <path
    d="M199 73.321C199.68 72.323 201.047 72.064 202.048 72.748C203.049 73.429 203.301 74.797 202.624 75.796C201.941 76.797 200.574 77.055 199.57 76.369C198.574 75.687 198.316 74.323 199 73.321Z"
    fill="white"
  />
  <path
    d="M192.773 74.383C193.258 73.667 194.236 73.486 194.95 73.972C195.664 74.46 195.849 75.436 195.361 76.151C194.87 76.865 193.901 77.048 193.181 76.558C192.47 76.073 192.283 75.097 192.773 74.383Z"
    fill="white"
  />
  <path
    d="M200.896 74.831C190.797 74.831 181.94 77.008 176.862 80.286C164.909 80.836 163.08 62.726 150.225 62.726C138.572 62.726 135.615 80.116 124.49 80.215C119.398 76.976 110.592 74.831 100.564 74.831C84.792 74.831 72.005 80.127 72.005 86.66C72.005 93.193 84.792 98.49 100.564 98.49C116.333 98.49 129.12 93.194 129.12 86.66C129.12 86.028 128.967 85.414 128.737 84.809C140.441 81.599 141.509 67.998 150.438 67.998C159.978 67.998 160.253 81.747 172.706 84.855C172.488 85.446 172.337 86.044 172.337 86.661C172.337 93.194 185.124 98.491 200.896 98.491C216.668 98.491 229.452 93.195 229.452 86.661C229.452 80.127 216.669 74.831 200.896 74.831ZM100.565 93.468C84.798 93.468 77.175 88.244 77.03 86.658C77.177 85.075 84.807 79.852 100.565 79.852C116.323 79.852 123.952 85.075 124.1 86.66C123.955 88.244 116.331 93.468 100.565 93.468ZM200.896 93.468C185.13 93.468 177.506 88.244 177.358 86.659C177.386 86.337 177.746 85.861 178.401 85.311C178.435 85.278 178.478 85.267 178.506 85.226C181.163 83.074 188.509 79.852 200.895 79.852C216.653 79.852 224.28 85.075 224.43 86.658C224.284 88.244 216.663 93.468 200.896 93.468Z"
    fill="#5C2938"
  />
  <path
    d="M107.738 41.428C107.738 41.428 100.811 28.602 146.325 26.879C188.076 25.297 189.159 31.007 189.655 35.733C190.287 41.744 183.647 48.385 147.589 49.966C108.619 51.676 107.738 41.428 107.738 41.428Z"
    fill="#19173E"
  />
  <path
    d="M117.545 37C117.545 37 142.211 49.334 177.005 33.837C177.005 33.837 177.637 2.208 145.69 2.525C113.745 2.841 117.545 37 117.545 37Z"
    fill="#19173E"
  />
  <path
    d="M177.004 33.837C177.004 33.837 177.092 29.23 175.43 23.554C170.607 26.836 161.878 30.765 147.274 31.307C130.257 31.936 121.647 29.643 117.76 28.027C117.119 33.15 117.545 37.001 117.545 37.001C117.545 37.001 142.211 49.334 177.004 33.837Z"
    fill="#4A5F71"
  />
</svg>
`;

exports[`Icons avatars should render "Raccoon" icon 1`] = `
<svg
  fill="none"
  height="300"
  viewBox="0 0 300 300"
  width="300"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    clipPath="url(#clip0)"
  >
    <path
      d="M71.02 56.581C71.02 56.581 66.852 25.806 70.698 7.857C70.698 7.857 71.663 -2.718 82.559 3.051C93.458 8.819 104.998 15.869 114.935 31.577L71.02 56.581Z"
      fill="#19173E"
    />
    <path
      d="M83.8441 45.041C83.8441 45.041 79.9951 32.861 81.9191 17.794C81.9191 17.794 82.2381 10.744 102.111 32.861C102.112 32.861 92.5001 43.117 83.8441 45.041Z"
      fill="#606D7E"
    />
    <path
      d="M236.081 56.581C236.081 56.581 240.247 25.806 236.4 7.857C236.4 7.857 235.438 -2.718 224.539 3.051C213.642 8.819 202.103 15.869 192.166 31.577L236.081 56.581Z"
      fill="#19173E"
    />
    <path
      d="M223.258 45.041C223.258 45.041 227.107 32.861 225.182 17.794C225.182 17.794 224.863 10.744 204.99 32.861C204.99 32.861 214.602 43.117 223.258 45.041Z"
      fill="#606D7E"
    />
    <path
      d="M236.196 227.181C236.196 271.843 199.195 300.743 153.548 300.743C107.907 300.743 70.9031 271.843 70.9031 227.181C70.9031 182.524 107.907 139.021 153.548 139.021C199.194 139.021 236.196 182.525 236.196 227.181Z"
      fill="#E37C2F"
    />
    <path
      d="M152.474 300.727C152.831 300.73 153.188 300.743 153.548 300.743C154.415 300.743 155.265 300.716 156.122 300.694L153.325 235.131L152.474 300.727Z"
      fill="#DBA187"
    />
    <path
      d="M205.208 159.655C191.056 147.02 173.102 139.021 153.548 139.021C133.222 139.021 114.616 147.666 100.222 161.182C110.27 190.044 135.836 258.12 153.33 257.916C170.987 257.708 195.506 189.073 205.208 159.655Z"
      fill="white"
    />
    <path
      d="M206.334 255.29L199.437 243.511C196.899 239.179 193.355 239.465 191.55 244.152L188.963 250.872L188.208 252.846L186.649 256.894L183.378 265.413L192.475 264.672L201.848 263.911L210.948 263.167L206.334 255.29Z"
      fill="white"
    />
    <path
      d="M213.545 268.687L181.894 271.266L181.311 264.123L212.958 261.547L213.545 268.687Z"
      fill="#DBA187"
    />
    <path
      d="M148.439 265.928C148.439 263.714 146.643 261.918 144.432 261.918C142.216 261.918 140.419 263.714 140.419 265.928C140.419 268.142 142.215 269.941 144.432 269.941C146.643 269.941 148.439 268.142 148.439 265.928Z"
      fill="#DBA187"
    />
    <path
      d="M148.439 285.523C148.439 283.309 146.643 281.516 144.432 281.516C142.216 281.516 140.419 283.31 140.419 285.523C140.419 287.739 142.215 289.533 144.432 289.533C146.643 289.533 148.439 287.74 148.439 285.523Z"
      fill="#DBA187"
    />
    <path
      d="M223.43 181.914C221.32 192.867 221.058 206.166 223.125 220.246C224.856 232.048 227.988 242.854 232.004 251.864C234.711 244.326 236.197 236.072 236.197 227.182C236.196 211.307 231.502 195.594 223.43 181.914Z"
      fill="#E8DFCE"
    />
    <path
      d="M74.9001 251.327C78.8011 242.424 81.8521 231.814 83.5501 220.246C85.5781 206.397 85.3631 193.304 83.3511 182.457C75.4671 196.009 70.9031 211.52 70.9031 227.182C70.9031 235.862 72.3151 243.936 74.9001 251.327Z"
      fill="#E8DFCE"
    />
    <path
      d="M153.995 157.254C152.046 154.19 127.622 153.563 109.597 153.527C106.315 155.855 103.177 158.41 100.222 161.182C103.657 171.045 108.902 185.485 115.019 200.215C128.666 218.401 137.515 217.829 137.515 217.829C157.56 191.996 156.663 166.161 156.663 166.161C156.663 166.161 157.114 162.153 153.995 157.254Z"
      fill="#E8DFCE"
    />
    <path
      d="M197.504 153.527C179.479 153.562 155.053 154.189 153.101 157.254C149.983 162.153 150.432 166.16 150.432 166.16C150.432 166.16 149.538 191.995 169.58 217.828C169.58 217.828 177.109 218.289 188.982 204.116C195.729 187.571 201.533 170.798 205.208 159.656C202.755 157.464 200.176 155.422 197.504 153.527Z"
      fill="#E8DFCE"
    />
    <path
      d="M256.383 101.126C255.047 85.985 254.153 80.195 248.813 69.503C234.002 39.878 200.71 16.057 154.506 15.166C154.184 15.158 153.871 15.171 153.552 15.171C153.236 15.171 152.922 15.158 152.601 15.166C106.392 16.057 73.1 39.878 58.2921 69.503C52.9491 80.195 52.0551 85.985 50.7191 101.126C49.3991 116.084 50.0181 142.083 62.7441 148.781C88.1321 162.142 115.385 173.365 152.6 173.365C152.922 173.365 153.235 173.351 153.551 173.349C153.87 173.352 154.183 173.365 154.505 173.365C191.716 173.365 218.969 162.142 244.358 148.781C257.084 142.083 257.702 116.084 256.383 101.126Z"
      fill="#C2CBD4"
    />
    <path
      d="M103.077 80.612C78.6181 73.042 61.8151 80.17 52.3521 86.964C51.6841 90.841 51.2341 95.281 50.7191 101.126C49.3991 116.084 50.0181 142.083 62.7441 148.781C83.381 159.642 105.247 169.088 132.691 172.242C136.788 155.907 144.746 123.883 144.746 123.883C144.746 123.883 143.464 93.111 103.077 80.612Z"
      fill="#606D7E"
    />
    <path
      d="M108.524 82.855C86.41 74.197 65.252 111.062 58.522 126.767C55.796 133.133 56.349 139.427 57.952 144.683C59.323 146.384 60.891 147.804 62.744 148.78C74.523 154.979 86.707 160.712 100.095 165.08C121.587 137.1 129.196 90.946 108.524 82.855Z"
      fill="#19173E"
    />
    <path
      d="M85.3571 95.523C85.3571 95.523 106.632 87.721 109.39 110.664C109.39 110.664 88.1021 123.998 85.3571 95.523Z"
      fill="#442282"
      opacity="0.49"
    />
    <path
      d="M85.3571 95.523C85.3571 95.523 106.632 87.721 109.39 110.664C109.39 110.664 88.1021 123.998 85.3571 95.523Z"
      fill="white"
    />
    <path
      d="M88.4571 100.471C88.9291 94.397 94.2201 89.847 100.294 90.311C106.365 90.774 110.915 96.074 110.452 102.145C109.989 108.216 104.692 112.766 98.6181 112.303C92.5431 111.839 87.9961 106.545 88.4571 100.471Z"
      fill="#3F1722"
    />
    <path
      d="M98.1211 99.975C98.2411 98.405 97.0631 97.031 95.4901 96.908C93.9141 96.788 92.5431 97.971 92.4181 99.542C92.2981 101.118 93.4781 102.492 95.0571 102.614C96.6271 102.731 98.0031 101.551 98.1211 99.975Z"
      fill="white"
    />
    <path
      d="M103.595 106.128C103.679 105.005 102.837 104.023 101.711 103.936C100.588 103.851 99.6041 104.691 99.5191 105.817C99.4321 106.943 100.277 107.924 101.406 108.009C102.526 108.094 103.507 107.254 103.595 106.128Z"
      fill="white"
    />
    <path
      d="M204.025 80.612C228.484 73.042 245.29 80.17 254.75 86.964C255.415 90.841 255.865 95.281 256.383 101.126C257.702 116.084 257.084 142.083 244.358 148.781C223.724 159.642 201.855 169.088 174.411 172.242C170.314 155.907 162.356 123.883 162.356 123.883C162.356 123.883 163.64 93.111 204.025 80.612Z"
      fill="#606D7E"
    />
    <path
      d="M198.578 82.855C220.692 74.197 241.849 111.062 248.58 126.767C251.309 133.133 250.753 139.427 249.15 144.683C247.779 146.384 246.211 147.804 244.357 148.78C232.58 154.979 220.394 160.712 207.006 165.08C185.517 137.1 177.906 90.946 198.578 82.855Z"
      fill="#19173E"
    />
    <path
      d="M221.748 95.523C221.748 95.523 200.471 87.721 197.709 110.664C197.709 110.664 219 123.998 221.748 95.523Z"
      fill="#442282"
      opacity="0.49"
    />
    <path
      d="M221.748 95.523C221.748 95.523 200.471 87.721 197.709 110.664C197.709 110.664 219 123.998 221.748 95.523Z"
      fill="white"
    />
    <path
      d="M218.645 100.471C218.176 94.397 212.882 89.847 206.811 90.311C200.737 90.774 196.19 96.074 196.651 102.145C197.112 108.216 202.411 112.766 208.482 112.303C214.559 111.839 219.103 106.545 218.645 100.471Z"
      fill="#3F1722"
    />
    <path
      d="M208.981 99.975C208.858 98.405 210.039 97.031 211.615 96.908C213.185 96.788 214.559 97.971 214.682 99.542C214.802 101.118 213.624 102.492 212.046 102.614C210.472 102.731 209.101 101.551 208.981 99.975Z"
      fill="white"
    />
    <path
      d="M203.507 106.128C203.42 105.005 204.265 104.023 205.391 103.936C206.514 103.851 207.496 104.691 207.58 105.817C207.67 106.943 206.825 107.924 205.699 108.009C204.576 108.094 203.592 107.254 203.507 106.128Z"
      fill="white"
    />
    <path
      d="M194.664 154.618C194.664 176.991 175.832 181.74 152.6 181.74C129.371 181.74 110.539 176.991 110.539 154.618C110.539 132.247 129.371 100.717 152.6 100.717C175.831 100.717 194.664 132.247 194.664 154.618Z"
      fill="white"
    />
    <path
      d="M144.249 157.693C144.249 157.693 134.896 153.683 128.661 160.809C122.426 167.935 126.434 177.733 129.55 184.862C132.669 191.985 125.987 201.339 121.98 193.768C121.98 193.768 122.871 203.566 133.56 199.555C144.249 195.548 138.459 172.834 138.459 172.834C138.459 172.834 154.492 171.5 144.249 157.693Z"
      fill="#3F1722"
    />
    <path
      d="M162.852 157.693C162.852 157.693 172.205 153.683 178.44 160.809C184.675 167.935 180.667 177.733 177.549 184.862C174.433 191.985 181.115 201.339 185.122 193.768C185.122 193.768 184.231 203.566 173.542 199.555C162.853 195.548 168.643 172.834 168.643 172.834C168.643 172.834 152.611 171.5 162.852 157.693Z"
      fill="#3F1722"
    />
    <path
      d="M175.335 151.782C175.335 144.686 164.079 143.219 153.482 143.219C142.883 143.219 131.627 144.685 131.627 151.782C131.627 158.879 142.883 171.835 153.482 171.835C164.079 171.836 175.335 158.878 175.335 151.782Z"
      fill="#19173E"
    />
  </g>
  <defs>
    <clipPath
      id="clip0"
    >
      <rect
        fill="white"
        height="300"
        width="300"
      />
    </clipPath>
  </defs>
</svg>
`;

exports[`Icons avatars should render "Sheep" icon 1`] = `
<svg
  fill="none"
  height="300"
  viewBox="0 0 300 300"
  width="300"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M218.2 192.978C218.2 192.978 229.017 197.829 235.733 190.739C242.447 183.649 239.09 173.581 239.09 173.581C239.09 173.581 250.957 170.807 256.996 152.687C264.83 129.187 250.656 116.503 250.656 116.503C250.656 116.503 262.894 106.925 261.473 87.402C259.981 66.886 240.582 58.306 240.582 58.306C240.582 58.306 250.021 43.526 237.597 27.716C225.285 12.048 201.412 21.747 201.412 21.747C201.412 21.747 197.681 4.58899 178.281 1.59999C154.213 -2.10201 147.319 12.048 147.319 12.048C147.319 12.048 138.286 -0.951006 115.982 1.97599C93.229 4.95799 89.498 24.731 89.498 24.731C89.498 24.731 80.17 18.017 70.843 25.476C61.516 32.937 64.876 43.757 64.876 43.757C64.876 43.757 49.953 45.247 43.983 60.915C38.455 75.429 48.834 88.152 48.834 88.152C48.834 88.152 33.539 102.699 42.864 130.676C49.549 150.728 68.978 155.671 68.978 155.671C68.978 155.671 59.281 167.983 69.353 182.161C75.839 191.288 86.886 191.483 86.886 191.483C86.886 191.483 88.004 208.643 105.538 214.615C123.442 220.712 135.755 208.643 135.755 208.643C135.755 208.643 148.066 222.076 170.078 218.718C191.214 215.493 194.324 198.947 194.324 198.947C194.324 198.947 200.294 208.643 210.367 204.916C219.333 201.596 218.2 192.978 218.2 192.978Z"
    fill="#C2CBD4"
  />
  <path
    d="M226.754 231.958C226.754 273.047 192.712 299.637 150.719 299.637C108.727 299.637 74.685 273.047 74.685 231.958C74.685 190.874 108.727 150.853 150.719 150.853C192.712 150.853 226.754 190.874 226.754 231.958Z"
    fill="#606D7E"
  />
  <path
    d="M111.957 179.71L151.326 271.131L189.483 177.89C189.483 177.89 147.489 150.635 111.957 179.71Z"
    fill="#E8DFCE"
  />
  <path
    d="M150.719 299.637C151.651 299.637 152.572 299.61 153.495 299.582L151.326 213.303L147.97 299.582C148.883 299.61 149.796 299.637 150.719 299.637Z"
    fill="#4A5F71"
  />
  <path
    d="M207.189 241.822H207.188L201.745 230.503C199.744 226.342 196.468 226.34 194.465 230.503L191.595 236.475L190.753 238.223L189.021 241.822H189.02L185.382 249.389H193.78H202.43H210.828L207.189 241.822Z"
    fill="#E8DFCE"
  />
  <path
    d="M212.803 248.054H183.586V254.643H212.803V248.054Z"
    fill="#4A5F71"
  />
  <path
    d="M158.772 237.089C158.772 249.381 155.167 257.336 150.719 257.336C146.273 257.336 142.668 249.38 142.668 237.089C142.668 224.792 146.273 212.819 150.719 212.819C155.167 212.819 158.772 224.792 158.772 237.089Z"
    fill="#E37C2F"
  />
  <path
    d="M159.821 210.359C159.821 217.376 155.747 221.919 150.719 221.919C145.691 221.919 141.617 217.377 141.617 210.359C141.617 203.346 145.691 196.51 150.719 196.51C155.746 196.509 159.821 203.346 159.821 210.359Z"
    fill="#E37C2F"
  />
  <path
    d="M151.434 206.193L135.127 227.343L113.722 196.259L135.127 191.925L151.434 206.193Z"
    fill="white"
  />
  <path
    d="M150.416 206.193L166.723 227.343L188.128 196.259L166.723 191.925L150.416 206.193Z"
    fill="white"
  />
  <path
    d="M150.925 254.611L107.097 165.425L78.301 174.599L108.757 217.344L129.011 222.758L117.506 229.623L150.925 276.528V254.611Z"
    fill="#4A5F71"
  />
  <path
    d="M150.416 254.611L194.243 165.425L223.04 174.599L192.582 217.344L172.33 222.758L183.834 229.623L150.416 276.528V254.611Z"
    fill="#4A5F71"
  />
  <path
    d="M219.141 55.911C219.141 55.911 241.578 74.98 278.594 78.719C278.594 78.719 290.447 79.564 291.681 84.327C294.297 94.424 251.672 124.709 217.646 92.18C217.646 92.18 208.671 51.424 219.141 55.911Z"
    fill="#E37B62"
  />
  <path
    d="M82.297 55.911C82.297 55.911 59.861 74.98 22.845 78.719C22.845 78.719 10.992 79.564 9.758 84.327C7.141 94.424 49.766 124.709 83.792 92.18C83.792 92.18 92.766 51.424 82.297 55.911Z"
    fill="#E37B62"
  />
  <path
    d="M233.469 93.715C233.469 45.511 196.42 32.22 150.719 32.22C105.017 32.22 67.971 45.51 67.971 93.715C67.971 131.05 113.706 206.78 150.719 206.78C189.064 206.78 233.469 128.067 233.469 93.715Z"
    fill="#E8DFCE"
  />
  <path
    d="M139.558 191.798C149.694 188.936 156.046 180.012 153.746 171.866C151.446 163.719 141.365 159.435 131.229 162.296C121.094 165.158 114.742 174.081 117.042 182.228C119.342 190.375 129.423 194.659 139.558 191.798Z"
    fill="#F5F4EF"
  />
  <path
    d="M75.559 164.713C75.559 164.713 97.245 195.371 139.123 161.347C139.123 161.347 151.088 159.85 149.219 173.31C147.349 186.771 75.187 203.973 75.559 164.713Z"
    fill="#3F1722"
  />
  <path
    d="M170.221 162.293C160.086 159.431 150.006 163.716 147.706 171.864C145.406 180.011 151.757 188.935 161.892 191.796C172.027 194.657 182.108 190.372 184.408 182.225C186.708 174.078 180.356 165.154 170.221 162.293Z"
    fill="#F5F4EF"
  />
  <path
    d="M225.879 164.713C225.879 164.713 204.192 195.371 162.315 161.347C162.315 161.347 150.352 159.85 152.22 173.31C154.089 186.771 226.252 203.973 225.879 164.713Z"
    fill="#3F1722"
  />
  <path
    d="M170.866 162.375C170.866 154.658 161.846 152.528 150.719 152.528C139.593 152.528 130.573 154.657 130.573 162.375C130.573 168.354 141.708 180.478 150.719 180.478C160.054 180.478 170.866 167.878 170.866 162.375Z"
    fill="#E37B62"
  />
  <path
    d="M93.526 84.992C93.526 84.992 114.438 78.245 116.239 100.577C116.239 100.577 95.102 112.686 93.526 84.992Z"
    fill="#442282"
    opacity="0.49"
  />
  <path
    d="M93.526 84.992C93.526 84.992 114.438 78.245 116.239 100.577C116.239 100.577 95.102 112.686 93.526 84.992Z"
    fill="white"
  />
  <path
    d="M96.346 89.905C97.028 84.039 102.333 79.833 108.194 80.512C114.061 81.189 118.267 86.496 117.587 92.363C116.91 98.232 111.603 102.435 105.736 101.756C99.87 101.071 95.666 95.777 96.346 89.905Z"
    fill="#19173E"
  />
  <path
    d="M105.726 89.792C105.902 88.272 104.813 86.898 103.291 86.725C101.771 86.544 100.395 87.638 100.219 89.163C100.042 90.678 101.133 92.052 102.655 92.23C104.172 92.406 105.552 91.317 105.726 89.792Z"
    fill="white"
  />
  <path
    d="M110.792 95.962C110.919 94.874 110.14 93.896 109.053 93.768C107.966 93.645 106.983 94.42 106.858 95.506C106.731 96.594 107.51 97.58 108.597 97.701C109.685 97.828 110.667 97.051 110.792 95.962Z"
    fill="white"
  />
  <path
    d="M207.914 84.992C207.914 84.992 187.002 78.245 185.2 100.577C185.199 100.577 206.336 112.686 207.914 84.992Z"
    fill="#442282"
    opacity="0.49"
  />
  <path
    d="M207.914 84.992C207.914 84.992 187.002 78.245 185.2 100.577C185.199 100.577 206.336 112.686 207.914 84.992Z"
    fill="white"
  />
  <path
    d="M205.093 89.905C204.411 84.039 199.106 79.833 193.243 80.512C187.377 81.189 183.172 86.496 183.851 92.363C184.528 98.232 189.835 102.435 195.7 101.756C201.568 101.071 205.772 95.777 205.093 89.905Z"
    fill="#19173E"
  />
  <path
    d="M195.713 89.792C195.535 88.272 196.626 86.898 198.148 86.725C199.668 86.544 201.042 87.638 201.219 89.163C201.396 90.678 200.306 92.052 198.784 92.23C197.266 92.406 195.888 91.317 195.713 89.792Z"
    fill="white"
  />
  <path
    d="M190.646 95.962C190.518 94.874 191.299 93.896 192.384 93.768C193.472 93.645 194.456 94.42 194.58 95.506C194.708 96.594 193.929 97.58 192.841 97.701C191.753 97.828 190.771 97.051 190.646 95.962Z"
    fill="white"
  />
  <path
    d="M217.766 106.283H212.757C212.436 106.283 212.131 106.338 211.835 106.416C211.611 105.892 211.397 105.35 211.136 104.896C210.43 103.05 207.878 99.611 198.69 98.969C196.527 98.819 192.158 98.565 187.209 98.565C172.671 98.565 166.343 100.697 163.402 102.503C161.133 99.335 157.118 96.122 150.985 96.122C144.509 96.122 140.766 100.052 138.847 103.059C136.325 101.165 130.293 98.565 114.226 98.565C109.279 98.565 104.91 98.818 102.745 98.969C93.557 99.611 91.005 103.05 90.299 104.896C90.038 105.35 89.825 105.892 89.599 106.416C89.303 106.338 89.001 106.283 88.68 106.283H83.67C81.652 106.283 80.017 107.918 80.017 109.937C80.017 111.956 81.652 113.589 83.67 113.589H87.865C87.386 118.768 88.187 124.644 90.815 129.349C94.02 135.085 99.504 138.243 106.253 138.243C108.894 138.243 111.774 137.771 114.817 136.836C135.852 130.378 141.003 119.801 142.241 115.553C143.16 112.4 143.006 109.348 141.852 106.825C142.819 104.831 145.511 100.6 150.985 100.6C156.128 100.6 158.869 103.617 160.169 105.744C158.505 108.44 158.138 111.929 159.195 115.553C160.433 119.802 165.584 130.378 186.619 136.836C189.66 137.771 192.542 138.243 195.181 138.243C201.932 138.243 207.415 135.085 210.619 129.349C213.247 124.644 214.05 118.768 213.57 113.589H217.765C219.783 113.589 221.418 111.956 221.418 109.937C221.419 107.918 219.784 106.283 217.766 106.283ZM135.796 113.674C134.295 118.823 127.477 125.926 112.845 130.42C105.093 132.798 99.653 131.393 96.677 126.071C93.326 120.077 94.179 111.389 96.237 108.043L96.563 107.514L96.583 107.401C97.117 106.922 98.989 105.964 103.212 105.668C105.29 105.523 109.482 105.282 114.227 105.282C131.346 105.282 134.768 108.279 135.279 108.878C136.186 109.944 136.373 111.69 135.796 113.674ZM204.761 126.071C201.785 131.393 196.345 132.797 188.593 130.42C173.96 125.926 167.144 118.823 165.643 113.674C165.065 111.69 165.253 109.945 166.158 108.879C166.671 108.28 170.092 105.283 187.21 105.283C191.954 105.283 196.147 105.524 198.225 105.669C202.446 105.965 204.318 106.923 204.853 107.402L204.876 107.515L205.201 108.044C207.259 111.389 208.112 120.077 204.761 126.071Z"
    fill="#3F1722"
  />
</svg>
`;

exports[`Icons interface icons should render IconCards 1`] = `
<svg
  fill="none"
  height="16"
  viewBox="0 0 16 16"
  width="16"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M1 2C1 1.44772 1.44772 1 2 1H6.5C7.05228 1 7.5 1.44772 7.5 2V5.5C7.5 6.60457 6.60457 7.5 5.5 7.5H2C1.44772 7.5 1 7.05228 1 6.5V2Z"
    fill="#011C37"
  />
  <path
    d="M1 9.5C1 8.94772 1.44772 8.5 2 8.5H5.5C6.60457 8.5 7.5 9.39543 7.5 10.5V14C7.5 14.5523 7.05228 15 6.5 15H2C1.44772 15 1 14.5523 1 14V9.5Z"
    fill="#011C37"
  />
  <path
    d="M8.5 2C8.5 1.44772 8.94772 1 9.5 1H14C14.5523 1 15 1.44772 15 2V6.5C15 7.05228 14.5523 7.5 14 7.5H10.5C9.39543 7.5 8.5 6.60457 8.5 5.5V2Z"
    fill="#011C37"
  />
  <path
    d="M8.5 10.5C8.5 9.39543 9.39543 8.5 10.5 8.5H14C14.5523 8.5 15 8.94772 15 9.5V14C15 14.5523 14.5523 15 14 15H9.5C8.94772 15 8.5 14.5523 8.5 14V10.5Z"
    fill="#011C37"
  />
</svg>
`;

exports[`Icons interface icons should render IconTable 1`] = `
<svg
  fill="none"
  height="16"
  viewBox="0 0 16 16"
  width="16"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    fill="#011C37"
    height="3"
    rx="1"
    width="3"
    x="1"
    y="1.5"
  />
  <rect
    fill="#011C37"
    height="3"
    rx="1"
    width="3"
    x="1"
    y="6.5"
  />
  <rect
    fill="#011C37"
    height="3"
    rx="1"
    width="3"
    x="1"
    y="11.5"
  />
  <rect
    fill="#011C37"
    height="3"
    rx="1"
    width="10"
    x="5"
    y="1.5"
  />
  <rect
    fill="#011C37"
    height="3"
    rx="1"
    width="10"
    x="5"
    y="6.5"
  />
  <rect
    fill="#011C37"
    height="3"
    rx="1"
    width="10"
    x="5"
    y="11.5"
  />
</svg>
`;
